--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,9 +1,9 @@
 ---
-title: 乌克兰边境，一位母亲将陌生孩童成功带到安全地带
+title: 疾控中心是白宫政治部门；乌克兰冲突结束了大流行吗？
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2083601/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2083648/)
 
-02/26/2022 在乌克兰边境，一位母亲将陌生人的两个孩子成功带到安全地带
+02/26/2022 班农战斗室：疾控中心现在是白宫的政治部门，自从这场冲突在乌克兰开始后，突然间大流行似乎已经结束了。
 
 By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
