--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,31 +1,66 @@
 ---
-title: 短视频：个人享有自由和人权，不受政府和任何组织约束
+title: 俄罗斯已表示将通过扣押在俄罗斯的外国人的资金来应对扣押俄罗斯的资金
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2083585/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/2083646/)
 
-翻译：Annabelle
-校对：Lish
-字幕：qingjing
-编辑：文泓
+[https://gtv.org/video/id=621caf1e4353d33974c3dda3](https://gtv.org/video/id=621caf1e4353d33974c3dda3)
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/图片2-39.png)图片来源：视频截屏
+This Just in also from Moscow and Russia is saying
+这刚刚也来自莫斯科而且俄罗斯说
 
+that it will respond to the seizure of money of Russian citizens and companies
+它将回应扣押俄罗斯公民和公司的钱
 
-我们不会允许这个在北美洲北部的国家再堕落下去，因为有人对权利的饥渴，抛弃了我们每个人拥有的自由。
+abroad by seizing funds of foreigners and foreign companies in Russia
+通过在俄罗斯扣押外国人和外国公司的资金到国外
 
-它们（自由）属于我们，我们每一个人都不一样，这就是为什么每个人的权力和自由都是那么的重要，对吧？
+so tit for tat on that one
+所以以牙还牙
 
-因为你代表你这个人，你是一个个体，而不是一个家庭，也不是一个团体；你不是其他组织的一部分，你不是省的一部分，而你是作为一个独立的加拿大人来拥有这些权利。这才是最重要的！
+That’s according to the RIA News Agency
+这是根据 RIA 通讯社的报道
 
-视频链接：[𝙍𝙄𝙎𝙀𝙈𝙀𝙇𝘽𝙊𝙐𝙍𝙉𝙀 在 Twitter: “Victoria Canada 🇨🇦 This is one Epic Speech 💣 Former Politician Brian Peckford 💣🔥👊 https://t.co/SfRNmnO3Xn” / Twitter](https://twitter.com/risemelbourne/status/1492983608474169345?t=98is_v8fiZNX49MIz0iblA&amp;s=19)
+quoting the deputy head of Russia’s security council Dmitry Medvedev
+根据俄罗斯安全委员会副主席德米特里·梅德韦杰夫
 
-发布：文泓
-更多资讯，请关注：**
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/Nz26pG64XF)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+He says Moscow does not rule out
+他说莫斯科不排除
+
+nationalizing the assets of companies registered in the United States European Un-ion
+将在美国、欧盟注册的公司的资产国有化
+
+and what he calls other unfriendly jurisdictions
+以及他所谓的其他不友好的司法管辖区
+
+So what is happening with the the war here
+那么这里的战争发生了什么
+
+the hot war, as you might say
+正如你所说，热战
+
+could be followed by some sort of economic war as well
+之后也可能发生某种经济战争
+
+**原视频链接**[https://twitter.com/skynews/status/1497513596217135105?s=24](https://twitter.com/skynews/status/1497513596217135105?s=24)
+
+Date:02/27/2022
+原视频标题: Russia has said it will respond to the seizure of Russian money by seizing the funds of foreigners in Russia
+俄罗斯已表示将通过扣押在俄罗斯的外国人的资金来应对扣押俄罗斯的资金
+原视频日期：2022/02/26
+原视频链接https://twitter.com/skynews/status/1497513596217135105?s=24
+任务编号：3872
+视频时间段 : 0:00-1:00
+
+英听校: 洛杉矶盘古农场 – Layka
+翻译: 洛杉矶盘古农场 – Layka
+翻译终校：洛杉矶盘古农场 – Mike Li
+字幕+视频制作：洛杉矶盘古农场-天涯行
+审片：洛杉矶盘古农场-银龙
+发布：洛杉矶盘古农场 – 彩虹 Rainbow
+[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
+洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+
+[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
 
  
 
