--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,41 +1,36 @@
 ---
-title: 俄乌战争：据报道俄罗斯军队资金不足装备不合格
+title: 
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/2083580/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2083642/)
 
-***评论：普京大帝的权力野心造就了乌克兰和俄罗斯可怕的战争灾难，乌克兰人民的勇敢智慧和坚毅无畏，成功地破坏了俄罗斯速战速决的计划。愿世界战争不再，和平早日到来！***
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/图片2-40.png)图片来源：视频截屏
 
-**据《福克斯新闻》作者：Peter Aitken，2022年2月26日报道：**
 
-俄罗斯军队似乎主要是未经训练的应征者，履行强制服役。
+科学上已经解决了，有一个压倒性的共识，即没有任何东西起作用，没有任何东西可能起作用，没有任何东西确实起作用，也没有任何东西会起作用，包括疫苗接种，这不仅是不必要的，实验性的、未经测试的，而且实际上正在杀害人们。
 
-俄罗斯入侵乌克兰费劲似乎因资金不足，装备不够，无法处理俄罗斯总统弗拉基米尔·普京所希望的迅速接管问题。
+我想借此机会直接指出我们今天都在这里的主要原因。
 
-一位美国官员周六表示，俄罗斯对入侵行动缺乏动力，感到“越来越沮丧”，特别是在该国北部。尽管经过几个月的计划和准备，俄罗斯还没有取得空中优势，乌克兰还保留着指挥和控制权。
+而这不（完全）是政府的问题。此时，正是我们这些医生，他们被我们的学院吓倒了，包括省内的学院，还有国际上的。
 
-而一位美国高级国防官员告诉福克斯新闻记者珍妮弗·格里芬，俄罗斯军队没有在夜间移动或战斗。大多数运动都是在黎明前开始，在白天进行，因为他们没有夜视仪，也没有接受过夜视仪的训练，这导致进展比预期慢。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/vt3.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/02/a77iz-zlibf.jpg)**图片来源：福克斯新闻网**![](https://assets.gnews.org/wp-content/uploads/2022/02/vff.png)
-2022年2月25日星期五，在乌克兰哈尔科夫郊区，乌克兰军人从一个停用的俄罗斯军用多管火箭发射器旁走过。周五，俄罗斯军队向乌克兰首都发起进攻，枪声和爆炸声越来越接近政府所在地，这是对一个民主国家的入侵，加剧了人们对欧洲更广泛战争的担忧，并引发了全世界对俄罗斯的制止。(AP Photo/Vadim Ghirda)
+如果医生们没有受到本应保护我们的机构（医院）的恐吓，如果他们被允许说出他们的想法，而没有受到失去他们的收入和职位的威胁，那么像你和我这样在封闭的诊室里的（面对）个别病人时就会告知其真相。事实是，他们被剥夺了这样的能力。
 
-部分问题可能是，俄罗斯军队是应征入伍的，没有经过严格的训练。士兵总委员会称，许多人不知道他们为什么在那里。
+几个世纪以来我们拥有的两个主要的医学伦理被这个政府践踏了，第一是不伤害和知情同意。
 
-入侵前几天，俄罗斯妇女开始在社交媒体上发帖称，她们的儿子在俄罗斯军队中完成了义务兵役，被派往乌克兰边境，随后，她们就被噤声了。
+首先，“不伤害”已经被践踏了。正如我们听到的那样，这些规定杀死了更多的人，比他们拯救的人要多得多。至于知情同意，我将把他交给你。如果你不了解情况，你怎么能给予知情同意。而你却被本应保护你的学院故意封锁了信息.
 
-乌克兰武装部队陆军报告说，俄罗斯军队在星期五晚上的激烈战斗后，在科诺托普停下来寻找食物和燃料。该声明建议当地人可以提供燃料和糖，但没有提供具体建议。
+所以我这样说，是为了说明一点。这个国家和国际上的医生和外科医生学院是与政府合谋进行国家认可的谋杀。
 
-据乌克兰新闻社UNIAN报道，当地人声称，俄罗斯士兵“不惜一切代价”试图购买猪油和月光酒。据报道，这些士兵说他们不知道自己在哪里，但他们“要去基辅”。
+谢谢你！
 
-**原文连接**：[https://www.foxnews.com/world/ukraine-russian-troops-underfunded-equipment-subpar](https://www.foxnews.com/world/ukraine-russian-troops-underfunded-equipment-subpar)
+视频链接：[PandaRolling（Athena Farm） on GETTR: “🇨🇦 Dr. Roger …”](https://gettr.com/post/pughf5de7f)
 
-翻译：洛杉矶盘古农场 — TrueSky
-校对：洛杉矶盘古农场 — Mike Li
-评论：洛杉矶盘古农场 — Wendy
-编辑：洛杉矶盘古农场 — Wendy
-发布：洛杉矶盘古农场 – 彩虹 Rainbow
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
-
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+发布：文泓
+更多资讯，请关注：**
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/Nz26pG64XF)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
