--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,17 +1,15 @@
 ---
-title: 200岁的听诊器进化版：超听诊器
+title: 中共做贼心虚 B站急删俄乌局势言论
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2083162/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2083198/)
 
-撰稿：东京樱花团︱盖特第一批注册
-![](https://assets.gnews.org/wp-content/uploads/2022/02/pasted-image-0-13.png)[*图片来源*](https://news.yahoo.co.jp/articles/076cc1b659c85968382a0193adabb85646a76071/images/000)
-听诊器已经使用了200多年，没有任何重大技术革新，其使用取决于医务人员的经验和听力，医生难免会错过一些东西。为了解决这个问题，日本医疗器材公司AMI正在开发一种新型听诊器——“超听诊器”。
+撰稿：东京樱花团︱喜马拉雅的微尘
+![](https://assets.gnews.org/wp-content/uploads/2022/02/pasted-image-0-2-3.png)[*图片来源*](https://d5ttlem47o98b.cloudfront.net/s3fs-public/styles/banner/public/news_cover/1641372646_5V.JPG?itok=KwyD8jQz)
+2月27日消息，哔哩哔哩（俗称“B站”）社区发布公告称，已经就“俄乌之间的国际局势”处理有关不良信息 1642 条，并视情节严重程度对其中 57 个账号进行了禁言封禁处理。
 
-2月28日，日清纺控股公司宣布与生产新型“超级听诊器”的初创公司AMI（鹿儿岛市）建立资本和商业联盟，将投资1.5亿日元以支持产品开发，包括技术合作，目标是在明年夏天实现商业化。该公司正在全国各地的多个医疗机构进行临床研究。集团已将“生命与保健”作为其战略业务领域之一，预计这将是具体产品商业化的开始。
+众所周知，中共是支持俄罗斯入侵乌克兰的背后黑手，急删俄乌局势言论，实则是做贼心虚。
 
-超听诊器安装了利用心跳分析诊断心脏病的软件，是一种AI听诊器。超听诊器结合视频聊天系统可以实现远程听诊，达到远程医疗的目的。
-
-信息来源：[**聴診器 200年ぶりに大きく進化 日清紡HDが「超聴診器」のAMIに出資、技術協力**](https://news.yahoo.co.jp/articles/076cc1b659c85968382a0193adabb85646a76071)
+信息来源：[**B站处置部分涉国际局势言论，倡议理性发布涉国际热点事件信息**](https://www.ithome.com/0/605/032.htm)
 
 *校对：东京樱花团/東洋武士*
 *发布：东京樱花团/tdownc2p*
