--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,11 +1,47 @@
 ---
-title: 中共病毒含有莫德纳疫情开始前三年已获专利基因片段
+title: 聚焦：乌克兰总统泽连斯基正在拯救世界（上）
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2083636/)
+`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/2083712/)
 
-02/25/2022 福克斯主播玛丽亚质问莫德纳公司CEO斯蒂芬·班塞尔为什么中共病毒含有莫德纳疫情开始前三年已获专利的基因片段。他没有否认，只是说他的团队正在分析这个指控是否真实，而且病毒可能来自武汉实验室的病毒增强实验。
+作者：丁过
 
-By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
+编辑与校对：冰糖葫芦喵
+
+**在俄罗斯入侵乌克兰前，美欧已经明确表态拒绝出兵乌克兰，几乎所有的人都认为乌克兰将不堪一击。**
+
+据爱沙尼亚前国防部长、欧洲议会议员特拉斯披露，普京很藐视乌克兰，他计划在1到4天内完成对乌克兰的占领，因此只携带了几天的后勤补给和火力弹药。
+
+但是，**乌克兰军民在总统泽连斯基的带领下，面对从三面来犯的俄军予以迎头痛击，使普京速战速决的计划彻底落空。**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2345截图20220222145924_副本.png)乌克兰总统泽连斯基（图片来源：网络）
+其直接结果是普京就此陷入了困境。据BBC2月28日报道，泽连斯基在国内的支持率飙升至91%，同时获得了巨大的国际声望，引来了全世界对乌克兰的广泛关注和援助。
+
+**新中囯联邦创始人郭文贵先生在最近的直播中，对不怕死的泽连斯基满是溢美之词，称泽连斯基正在成为欧洲乃至世界的领䄂。**
+
+泽连斯基确实配享这样的荣耀：
+
+**普京之所以敢于入侵乌克兰，是因为俄罗斯和中共国结成了实质上的同盟关系。**
+
+**中俄结盟**的目的是在军事上对抗北约，在政治经济上对抗欧美，**终极目标是成为世界霸主。**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/普京习近平-3-e1646094923509.jpg)习近平与普京（图片来源：网络）
+**俄乌战争的爆发表明，脆弱的国际关系已经重回弱肉强食的丛林时代，是人类文明倒退的标志性事件。**
+
+**此前普京向西方提出，“北约停止东扩，**部署退回1997年以前，放弃在乌克兰、东欧、外高加索、中亚的任何军事活动”。
+
+实质上这是彻底改变欧洲现状的要求，暴露了俄罗斯要接管或主导欧洲的图谋，所有的北约成员国都不可能同意，尤其是那些在历史上遭受俄国反复侵略、被前苏联共产主义长期毒害的东欧国家。
+
+**如果北约接受普京的条件，北约将马上解体。**
+
+抛出不可能被西方接受的条件，仅仅是**普京**计划的第一步，他**的如意算盘是迅速拿下乌克兰后，继续对东欧大兵压境，一步一步逼迫北约从东欧撒出军事力量，简单说就是缴械北约。**
+
+**接下来还有精彩内容，请看：聚焦：泽连斯基正在拯救世界（下）**
+
+新闻来源链接：
+
+[https://info.51.ca/news/world/2022-02/1074995.html](https://info.51.ca/news/world/2022-02/1074995.html)
+
+[https://news.ltn.com.tw/news/world/breakingnews/3842894](https://news.ltn.com.tw/news/world/breakingnews/3842894)
+
+
 
  
 
