--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,9 +1,9 @@
 ---
-title: 安大略省政府命令酒类管理委员会下架所有俄罗斯产伏特加
+title: 绵延15英里长的“人民车队”向俄克拉荷马进发
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2083623/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2083691/)
 
-02/25/2022 《城市新闻》报道安大略省政府命令酒类管理委员会下架所有俄罗斯产商品，以及俄罗斯入侵乌克兰对能源市场产生怎样的影响
+02/26/2022 绵延15英里长的“人民车队”向俄克拉荷马进发，所到之处都有数千人夹道欢迎
 
 By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
