--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,29 +1,31 @@
 ---
-title: 美国计划将俄罗斯加密货币纳入制裁清单
+title: 短视频：个人享有自由和人权，不受政府和任何组织约束
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/2083361/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2083585/)
 
-**撰稿：日本东京方舟农场  海星**
+翻译：Annabelle
+校对：Lish
+字幕：qingjing
+编辑：文泓
 
-近期，针对俄罗斯日趋激烈的侵略行为，美国政府计划将加密货币纳入制裁清单。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/图片2-39.png)图片来源：视频截屏
 
-据《自由时报》报导，为了让俄罗斯对侵略乌克兰的行为付出相应代价，美国拜登政府正在考虑对其实施进一步经济制裁，将加密货币也纳入制裁清单。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片-1-32.jpeg)（图片来源：Blockchain）
+我们不会允许这个在北美洲北部的国家再堕落下去，因为有人对权利的饥渴，抛弃了我们每个人拥有的自由。
 
-该报导称，中共官媒央视财经近期曝光俄罗斯政府及富豪为躲避多国制裁，将财富透过加密货币形式藏匿，总金额高达1兆美元。
+它们（自由）属于我们，我们每一个人都不一样，这就是为什么每个人的权力和自由都是那么的重要，对吧？
 
-该报导指出，以加密货币形式藏匿的资金虽然不易被发现，增加了欧美对俄罗斯实施经济制裁的难度，但美国政府早前便已有制裁加密货币的经验。去年9月，美国政府将涉嫌洗钱及勒索的俄罗斯加密货币交易所 SUEX OTC 和 Chatex 列入了黑名单，有效地遏制了犯罪分子通过加密货币转移或获取资金。
+因为你代表你这个人，你是一个个体，而不是一个家庭，也不是一个团体；你不是其他组织的一部分，你不是省的一部分，而你是作为一个独立的加拿大人来拥有这些权利。这才是最重要的！
 
-此前，美国政府和盟国已共同宣布对俄罗斯实施经济制裁，将其部分银行从SWIFT系统中剔除。
+视频链接：[𝙍𝙄𝙎𝙀𝙈𝙀𝙇𝘽𝙊𝙐𝙍𝙉𝙀 在 Twitter: “Victoria Canada 🇨🇦 This is one Epic Speech 💣 Former Politician Brian Peckford 💣🔥👊 https://t.co/SfRNmnO3Xn” / Twitter](https://twitter.com/risemelbourne/status/1492983608474169345?t=98is_v8fiZNX49MIz0iblA&amp;s=19)
 
-参考链接：
-1. [https://ec.ltn.com.tw/article/breakingnews/3843064](https://ec.ltn.com.tw/article/breakingnews/3843064)
-2. [https://gnews.org/zh-hans/2072270/](https://gnews.org/zh-hans/2072270/)
-
-素材采编：海星
-编辑：老孙
-发布：文曦
+发布：文泓
+更多资讯，请关注：**
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/Nz26pG64XF)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
