--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,65 +1,31 @@
 ---
-title: “我们将摧毁占领者”：泽连斯基向普京发出警告
+title: 白宫：普京人为制造并不存在的威胁,为进一步侵略乌克兰寻找理由
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2083234/)
+`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/2083417/)
 
-**编译： Jenny Ball**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip乌克兰总统泽伦斯基：我们将摧毁入侵者.png)图片来源:dailymail.co.uk
-克里琴科对基辅居民实行宵禁，直到星期一，乌克兰平民死亡人数达到 219。
+作者：小小小鸟 （酷翻组）
+采集：玫瑰新闻组
 
-抵抗总统沃洛德米尔·泽连斯基(Volodmyr Zelensky)今天承诺要“摧毁占领者”，他说，他的国家军队已经成功击退了向基辅推进的俄罗斯军队。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/3012.jpg)
 
-泽连斯基在给被围困国家人民的视频信息中，指责克里姆林宫试图夺取首都，推翻政府并建立一个“像顿涅茨克一样”的“傀儡”政权，这是战争贩子普京在发动全面入侵战争之前正式承认的两个分离主义地区之一。
+白宫新闻秘书普萨基2月27日称，俄罗斯总统普京正在制造并不存在的威胁，以便为进一步侵略乌克兰而进行辩护，美国发誓将站出来支持乌克兰，并可能对莫斯科实施能源制裁。美国及其盟国已经对俄罗斯实施了严厉的制裁，以削弱其入侵乌克兰的经济。
 
-他称“我们打破了他们的企图”，并补充说：“我们国家的许多城市和地区都在进行战斗，我们知道，我们正在保护我们的国家、土地和孩子的未来。 基辅和首都周边主要城市还在我军的控制中。
+普萨基说，这些制裁可以与我们对待伊朗的情况相提并论，切断了他们与全球社会银行系统的联系。“我们现在还制裁了他们80%的银行和金融部门。这使得普京总统和俄罗斯政府不仅很难做生意，而且也很难资助他们的军事和创新领域使其在本国有进一步的发展。因此，我们已经采取了严厉的措施。当然，我们还可以考虑做更多的事情”，她接着说。
 
-“每个乌克兰人都应该记住一件事：如果你能阻止并摧毁占领者——那就去做吧。 每个能够回到乌克兰的人——回来保卫乌克兰吧。”
+在回答一个问题时，她说，对俄罗斯的能源制裁也正在讨论之列。“这确实是我们在这场冲突的过程中从普京总统那里看到的一种模式，即制造并不存在的威胁，以便为进一步的侵略辩护。全球社会和美国人民应该通过这个棱镜看穿他。我们已经看到他一次又一次地这样做”，普萨基在采访中告诉美国广播公司（ABC）。俄罗斯从来没有受到过北约的威胁，这都是普京总统的一个借口。我们将站出来，她说：“我们有能力保护自己，但我们也需要指出我们在这里看到的普京总统的真相”。乌克兰总统弗拉基米尔-泽连斯基正勇敢地站出来反对普京和俄罗斯领导人的入侵。“当拜登总统与乌克兰总统进行最后一次交谈时，泽连斯基总统要求美国为其提供额外的安全援助。这正是我们所提供的东西，而且我们将与他保持密切的联系。拜登总统正在与他保持沟通，正如我们所有人一样，”她说。
 
-与此同时，基辅的宵禁一直持续到周一早上 8 点，以确保最有效的城市防御和人民的安全。之前的每日宵禁时间是晚上 10 点到早上 7 点。
+众议院共和党领袖凯文-麦卡锡在周日脱口秀节目的另一次采访中称，普京是鲁莽的、邪恶的和危险的。“他这样做可能有两个原因，一是因为这场战争进展不顺利，他被卷入了一个漩涡，从而试图通过谈判找到一条出路使自己变得更强大”，第二是他的情绪不稳定，他甚至是想尝试核武器这条路。在这个时候，世界上没有一个国家应该与普京站在一起”。麦卡锡说：“每个人都应该团结起来，基于他刚刚在过去几小时内声称要采取的行动”。
 
-市长维塔利·克里琴科说：“宵禁期间，街上的所有平民都将被视为敌人破坏或侦察组人员。”
+前国务卿赖斯在另一次电视采访中指出，普京已经陷入了她个人从未见过的境地。“我不知道他在那个黑暗的世界里处于什么样的位置，但我要说的是：我们必须确保他真的明白，试图越过第五条界限的代价将是非常大的，对一个国家的攻击就是对所有国家的攻击。因此，波罗的海国家确实会受到美利坚合众国的保护”。
 
-此前，基辅的一座高层公寓楼今天早上被一枚毁灭性的导弹击中，导致乌克兰的平民死亡人数达到 198 人。
+“如果他在乌克兰遇到了很大的阻力，如果他不能轻易取胜，如果他不能实现他的目标，他有可能会撤军。但我想确保他真的会这样做。我想确保他不会将加里宁格勒收归于俄罗斯，这是已被波罗的海国家切断的俄罗斯领土”，赖斯说。“因此，我们在加强北约在波罗的海和波兰部队方面所做的工作，如果可能的话，这是让他知道代价会非常高的一种方式”。
 
-俄罗斯国防部在推特上发布的情报更新中说，俄罗斯尚未获得对乌克兰领空的控制权，这大大降低了俄罗斯空军的效力。
+原文链接：
+[https://www.indiatoday.in/world/russia-ukraine-war/story/putin-is-manufacturing-threats-that-don-t-exist-to-justify-further-aggression-in-ukraine-white-house-1918641-2022-02-28](https://www.indiatoday.in/world/russia-ukraine-war/story/putin-is-manufacturing-threats-that-don-t-exist-to-justify-further-aggression-in-ukraine-white-house-1918641-2022-02-28)
 
-但武装部队部长詹姆斯·赫佩今天表示，没有理由认为“完美的结局指日可待”，因为他警告说，冲突可能会持续数月。
-
-他告诉BBC：“没有人应该认为这已经结束了。在乌克兰、它的武装部队和非常悲惨的乌克兰人民面前，从过去 48 小时内我们所看到，这将会是几天、几周、几个月的时间。”
-
-正如乌克兰军队说，他们今天已经击退了俄罗斯对其首都的袭击，泽连斯基在一段激情的视频中发誓，要留下来和他的人民继续战斗。
-
-“我就在这里。我们不会放下任何武器。我们将保卫我们的国家，因为我们的武器就是我们的真理，”他在办公室外说道，并谴责说他已经投降或逃跑的说法是虚假信息。
-
-身穿军装的总统补充说：“互联网上出现了很多虚假信息，称我呼吁我军放下武器，撤离正在进行中。”
-
-“事实是，这是我们的土地、我们的国家、我们的孩子，我们将保护这一切。 这就是我想告诉你的。荣耀归于乌克兰”
-
-今天令人震惊的画面显示，一枚导弹将朱利尼机场附近的一座塔楼撕裂，而内部的闭路电视也显示了该地点被击中后的破坏程度。
-
-图片显示，该建筑物的侧面至少有五层楼的洞被炸开，下面的街道上散落着碎石。据报道，有两人在轰炸中丧生。
-
-安东·赫拉申科还表示，俄罗斯谎称没有炮击民用基础设施，声称至少有 40 个此类地点遭到袭击。乌克兰周六晚些时候报道称，该国东部有 19 人在炮击中丧生。
-
-俄罗斯军队袭击造成平民死亡，迄今为止总数达到 219 人，其中包括三名儿童。
-
-乌克兰卫生部长今天表示，约有 1,200 人（包括 33 名儿童）受伤。
-
-与此同时，俄罗斯军队也向乌克兰的军事设施发射了一连串巡航导弹。
-
-来自世界各地的支持不断涌入，包括剑桥公爵和公爵夫人，他们说他们与乌克兰人民“站在一起”，为他们的未来“勇敢地战斗”。
-
-**新闻来源**：[dailymail.co.uk][‘We will destroy the occupiers’: Zelensky’s warning shot to Putin as Mayor Vitali Klitschko imposes a curfew on Kyiv residents until MONDAY and Ukrainian civilian death toll hits 219](https://www.dailymail.co.uk/news/article-10554483/Zelensky-fires-warning-shot-Putin-noose-tightens-Kyiv.html)
-
-* * *
-
-***审核：文乐
-校对：小东
-发布：信心满满***
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-9.jpeg)
-
-
+**校对：sherryok (水云间)**
+**审核校对：Barry Jack
+上传排版：V在途中**
 
  
 
