--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,41 +1,34 @@
 ---
-title: DC大中华时事：中共称人民币国际化借冬奥“拿下一分”
+title: 大直播后记:中共灭亡的必然性和必要性
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2083731/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2083846/)
 
-*编辑：西北风 / 作图：*信正
+整理：清水冷香、Lucy Liu
+编辑：blame
 
-![](http://himalayawashingtondc.org/wp-content/uploads/2021/08/ScreenShot-2021-08-01-at-17.25.09@2x.png)
-
-#   墙国妄语每日驳
-
-### **0**2.27.2022
-
-[港媒：人民币国际化借冬奥“拿下一分”\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/finance/20220222/2469979.shtml)
-
-***简评：***理解很丰满，现实很骨感，中共项庄舞剑，意在未来数字加货币，中共觉得几十年的全世界蓝金黄，3F计划，对世界产业链的控制和影响使中共有实力挑战现有国际经济金融秩序，从而主导未来铸币权独霸地位，世界是不会让中共通过数字货币来使中共狂印乱发的冥币绝处逢生的，中共想要用数字货币洗劫国际财富来为自身续命那只能是妄想了。
-
-### 02.27.2022
-
-[外媒：俄乌谈判仍在继续，已持续3小时\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/ckkx/kuaixun20220228/2470854.shtml)
-
-***简评：***俄罗斯和欧洲的分歧和矛盾要追溯到罗马时代，当时东西罗马分治，罗马帝国最终因对基督的教义的解读分岐而东西罗马产生对抗和分歧最终形成西罗马以基督教为国教，东罗马以东正教为国教，而双头鹰的俄罗斯自认为就是东罗马东政教正统继承者，罗马帝国从未消失，只不过以另外一种形式存在，今天的英德法的欧洲和俄罗斯的东欧对抗从未停止。其目标就是是欧洲人的欧洲还是俄罗斯的欧洲。但是有一点我们得清楚，俄罗斯和欧洲再怎么缠斗，但他们同属基本督教文化，在精神内核上他们都是罗马人，有分歧但同源同种，谁知道也吃不了谁，但俄罗斯和中国那不同文不同种，在国内家利益面前绝对是天然敌对的，无论中共给了俄罗斯多少钱，给了多多少领土。
-
-### 02.27.2022
-
-[台当局开始盘点防空避难所\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/tw/20220228/2470803.shtml)
-
-***简评：***都说俄罗斯和中共是不结盟的结盟国，无论现在世界局势怎么发展下去，所有人都感觉到中国将是这个动荡时局最终买单者。如果做为俄罗斯总统普京能以进攻乌克兰不惜同族互残而让中国入局台海战争，从而引起中国内乱甚至内战甚至国际势力参与而分裂中国，这笔真正的买卖无论从那个角度来看都是划算的，这将永久的彻底的真正消除俄罗斯来自东方长远的威胁，俄罗斯当然要重新崛起，那得是有前提的，谁说这笔买卖不划算呢，普京不了解中共国实际国情吗，俄罗斯那可是中共祖宗，普京不了解国际吗？普京克格勃出生年青时就在欧洲的东德。世界都在等待请君入瓮，焦急的等待着习太阳出手，好像全世界都在讲：赶紧吧，还磨叽啥呢。
-
-#   港台资讯
-![](https://media.discordapp.net/attachments/858887785507323904/947348712437477386/DC2.26.2022-3.jpg?width=961&amp;height=541)![](https://media.discordapp.net/attachments/858887785507323904/947348718473080852/DC2.26.2022-1.jpg?width=961&amp;height=541)![](https://media.discordapp.net/attachments/858887785507323904/947348721501343805/DC2.26.2022-2.jpg?width=961&amp;height=541)
+- ![文章配图](https://assets.gnews.org/wp-content/uploads/2022/02/dazhibohouji_common-1.png)图片来源：雅典娜设计组
 
 
+在学校里，老师长的漂亮，成了校长的性工具；学生长的好看，成了老师拿去进行性交易的工具。人心都烂透了！中国最大的问题，最大的挑战：不是台湾，不是所谓的美帝，而是烂透的人心！土地江河被污染，人与人之间也没有信任，是共产党在中国百年来不断作恶而积累的后果。过去一次次的土改，农民到最后还是种地，财富无法积累，还要交公粮，多可怜。一次次的经济改革，城市里的人是越来越忙碌，癌症率越来越高；孩子上学越来越贵，教育毁了，工人也看不到希望。农民怎么都过不上工人的日子，工人怎么也过不上任何正常人该有的好日子。更不用和利益阶层的人相比，因为你换不起肾，包不起二奶三奶，不可能把你的孩子送到哈佛上学。中国人在如此扭曲变态的社会下苦难重重，是在为过去中共百年为祸中国，荼毒中国而买单。
 
+中共占领了中国，这时形成了什么？**一党独大**！！！党内高层盗国贼家族拼命盗窃人民财富，彼此之间激烈的政治斗争，形成对中国的自然环境和社会生态的毁灭性打击。当国家发展无法维系的时候，共产党考虑把各阶层的财富，包括中下层各级官员的财富拿过来维持自身统治，就选出了一个敢杀人，敢杀老百姓的习近平，习二货！让习去杀人抢钱，吸引所有仇恨，再踹掉习。“一切都是习干的，跟我们没有关系！”然后共产党继续执政。盗国集团没有想到，习二货上位后，成了习太阳。不仅踹不掉，还要反过来把整个南普陀计划掀翻。整个中国必须装在习太阳的口袋里，同时还要给世界把脉，开药方。我习太阳要给全世界治病，都得听我的。整个中国被习神拖着奔向深渊，局面无解。
 
-*编辑：*西北风
-*作图：信正
-发布：文顾*
+意外中总有意外，新中国联邦横空出世，**MILES GUO**带着战友振臂高呼——**Take Down the CCP****！！！**中国共产党不等于中国人，中国人生活在水深火日中，山河已毁，人心已烂，却疯狂膨胀，与世界为敌。经过五年的爆料，海航事件，王健事件，马云事件，私有化，习近平的各种行为，乌克兰、冠状病毒、疫苗、台湾，共产党的经济买买买，到现在是卖卖卖，然后征服香港，杀害香港同胞，现在欲擒台湾，全世界没有人敢否定我们，说得这些有一样是假的吗？
+
+这个时候我希望习做什么？我希望他不打台湾，我希望他放下屠刀、立地成佛。但这是幻想，很幼稚的政治幻想。可我是人，我站在台湾同胞，站在中国人的长远利益来看，我不惜一切会灭掉习近平。如果我是习近平身边的人，我一定把他灭掉。甭说是习太阳，哪怕他是我亲爹，我亲哥，我毫不犹豫手起刀落把他灭了。因为我相信，我灭了他，我就能拯救14亿中国人，我能拯救2300万台湾同胞。我有机会我绝对会这么做，你信不信！哪怕手上没刀，我用牙齿咬断他脖子。
+
+习近平打台湾，一定被灭。他不打是什么结果呢？他不打，国内经济也会崩塌。为什么？因为欧美已经不可能再跟共产党搞经济合作。今天，对新中国联邦人来说有一个最好的消息，在人类历史上，SWIFT系统第一次大规模的停止和一个主权国家的合作。开了先河，有第一次就有第二次。你一点也不用担心，他打不打台湾都会给他停了，仅仅需要一个理由而已。我们准备好了三个理由：第一，共产党实行新疆大屠杀，该不该停了SWIFT？第二，共产党让香港那么多人消失，残杀和强奸参加抗议的孩子，这些会有视频爆料出来，难道不该给他停了？如果说，这两条罪行你美国人都不想追究，那新冠病毒溯源你美国人要不要查？该不该给他停掉？共产党制造病毒，又利用疫苗在全世界到处杀人，让整个西方世界处于大动乱之中。当社会政治经济彻底完了，人民全部上街游行，卡车运动无处不在的时候，美国你要不要找一个替死鬼？美国精英集团不会自己买单吧！唯一选择就是停掉共产党的SWIFT，只要一停，68%的出口型经济瞬间垮掉，想进口粮食都没有美元了。过去在东北，中国人缺粮就一天吃两顿。未来在整个中国，一星期你都吃不上两顿饱饭。中国人还不去消灭共产党吗？还跑去打台湾吗？不消灭共产党，你就没饭吃！推翻了共产党，才能不饿肚子。在这种情况下，只有消灭了共产党，全球的投资者才会涌向中国。台湾、香港包括西藏新疆的独立只能让中国更强大。
+
+资料来源：[2022年2月27日文贵大直播](https://gtv.org/video/id=621b7633019ef64da651ee6c)
+
+发布：tianzhihuan
+
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
