--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,60 +1,70 @@
 ---
-title: 俄罗斯已表示将通过扣押在俄罗斯的外国人的资金来应对扣押俄罗斯的资金
+title: 乌克兰妈妈从防空洞动情呼吁国际军事干预
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/2083646/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/2083724/)
 
-[https://gtv.org/video/id=621caf1e4353d33974c3dda3](https://gtv.org/video/id=621caf1e4353d33974c3dda3)
+[https://gtv.org/video/id=621cb0024353d33974c3dde4](https://gtv.org/video/id=621cb0024353d33974c3dde4)
 
-This Just in also from Moscow and Russia is saying
-这刚刚也来自莫斯科而且俄罗斯说
+Olena Gnes (Ukrainian mom)
+奥莱娜·格内斯（乌克兰妈妈）
 
-that it will respond to the seizure of money of Russian citizens and companies
-它将回应扣押俄罗斯公民和公司的钱
+I asked you for military intervention intervention
+我请求你进行军事干预
 
-abroad by seizing funds of foreigners and foreign companies in Russia
-通过在俄罗斯扣押外国人和外国公司的资金到国外
+Russia violated all our legal system
+俄罗斯违反了我们所有的法律制度
 
-so tit for tat on that one
-所以以牙还牙
+All international laws, all possible international laws
+所有国际法，所有可能的国际法
 
-That’s according to the RIA News Agency
-这是根据 RIA 通讯社的报道
+Don’t Don’t Don’t please allow the genocides to happen here
+不要、不要、不要，请不要让种族灭绝在这里发生
 
-quoting the deputy head of Russia’s security council Dmitry Medvedev
-根据俄罗斯安全委员会副主席德米特里·梅德韦杰夫
+This is what’s they want to do this
+这就是他们想要做的
 
-He says Moscow does not rule out
-他说莫斯科不排除
+They tried to do this in 30s when the great famine here in Ukraine
+他们试图在 30 年代乌克兰大饥荒时做到这一点
 
-nationalizing the assets of companies registered in the United States European Un-ion
-将在美国、欧盟注册的公司的资产国有化
+and many Ukrainians, millions of us were killed by starvation
+和许多乌克兰人，我们数百万人死于饥饿
 
-and what he calls other unfriendly jurisdictions
-以及他所谓的其他不友好的司法管辖区
+Now they want to kill even more of us to control us
+现在他们想杀死更多的我们来控制我们
 
-So what is happening with the the war here
-那么这里的战争发生了什么
+Okay, so they just wanted to take us by force and control
+好吧，他们只是想通过武力来控制我们
 
-the hot war, as you might say
-正如你所说，热战
+don’t don’t please prevent the new genocide of Ukrainians here
+不要, 请阻止乌克兰人在这里的新种族灭绝
 
-could be followed by some sort of economic war as well
-之后也可能发生某种经济战争
+And the only way how you can do this, only by force
+而你能做到这一点的唯一方法，只有通过武力
 
-**原视频链接**[https://twitter.com/skynews/status/1497513596217135105?s=24](https://twitter.com/skynews/status/1497513596217135105?s=24)
+You know, I never wanted anyone to kill anyone
+你知道，我从不想任何人杀任何人
+
+I am the most peaceful person in the world and Ukrainians are
+我是世界上最和平的人，乌克兰人是爱好和平的人
+
+but they are just coming and they are just killing us
+但他们只是来了，他们只是来杀我们
+
+So please tell them, please come and see
+所以请告诉他们，请关注乌克兰
 
 Date:02/27/2022
-原视频标题: Russia has said it will respond to the seizure of Russian money by seizing the funds of foreigners in Russia
-俄罗斯已表示将通过扣押在俄罗斯的外国人的资金来应对扣押俄罗斯的资金
+原视频标题: Ukrainian mom makes emotional plea for international military intervention from bomb shelter
+乌克兰妈妈从防空洞动情呼吁国际军事干预
 原视频日期：2022/02/26
-原视频链接https://twitter.com/skynews/status/1497513596217135105?s=24
-任务编号：3872
-视频时间段 : 0:00-1:00
+原视频链接https://twitter.com/foxnews/status/1497647665760378880?s=24
+任务编号：3873
+视频时间段 : 0:00-0:53
 
-英听校: 洛杉矶盘古农场 – Layka
-翻译: 洛杉矶盘古农场 – Layka
+英听校：洛杉矶盘古农场 – Layka
+翻译： 洛杉矶盘古农场 – Layka
 翻译终校：洛杉矶盘古农场 – Mike Li
-字幕+视频制作：洛杉矶盘古农场-天涯行
+字幕+视频制作：洛杉矶盘古农场-Jambo
 审片：洛杉矶盘古农场-银龙
 发布：洛杉矶盘古农场 – 彩虹 Rainbow
 [![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
