--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: 中国人对事物判断的愚蠢
+title: 台湾、大陆专业军人的差别
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2085882/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2086041/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
