--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 中共依靠外来性粮食和进口科技
+title: 台湾好，所有人全世界都好
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2086931/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2087028/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
