--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,7 +1,7 @@
 ---
-title: SWIFT绝对是中共的致命（二）
+title: 台湾好，所有人全世界都好
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2086954/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2087028/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
