--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 为信仰而活不为别人而活
+title: 对台战争将会导致国内各种灾难的发生
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2087125/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2087238/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
