--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,33 +1,32 @@
 ---
-title: 拜登指派跨党派代表团于3月1日访台
+title: 【秘翻时评】卫星影像曝俄军车绵延64公里 美估近日包围基辅
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2089288/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2089484/)
 
-作者：纽约香草山 医疗部 云豹
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-当地时间2月28日晚，台湾总统府发言人张惇涵表示，美国跨党派代表团将于3月1日至2日，搭乘行政专机来台湾访问。
+By : **[秘翻时评](https://gtv.org/video/id=621dfd6c019ef64da65337ce)**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/Slide12.jpeg)
+**[2022‑03‑01](https://gtv.org/video/id=621dfd6c019ef64da65337ce)**
 
-该代表团将由美国前参谋首长联席会议主席穆伦率领，成员中包括前国防部政策次长佛洛诺伊、前白宫副国安顾问欧苏利文、前白宫国安会亚洲事务资深主任葛林，及前白宫国安会亚洲事务资深主任麦艾文，显示出两党派对印太区域及台湾安全议题的高度共识与重视。
+**秘翻时评**
 
-张惇涵称，蔡总统将于3月2日与代表会谈，双方将就台美关系及国际区域局势等各项重要议题交换意见。此次台美交流将促进双边关系的稳健发展，共同维护区域的和平稳定，也突显台美关系「坚若盘石」的深远意义。
+1.卫星影像曝俄军车绵延64公里 美估近日包围基辅
 
-参考链接：[拜登指派跨黨派代表團3/1訪台 府：彰顯台美關係堅若磐石](https://www.cna.com.tw/news/aipl/202202285010.aspx)
+2.壳牌公司準備撤出俄罗斯，抛弃俄罗斯天然气公司交易
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/三月小图-1.png)
+3.中共无法撤侨 女硕士防空洞感染中共病毒
 
-总编：Zion文恩
-编辑：宁文静
-校正/发稿：谐趣园
+**今日评论内容：**
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+1. 乌克兰男子肉身挡军车 犹如天安门广场坦克人
+2. 新中国联邦大救援 人权和人民高于任何政治
+
+
+GTV鏈接：[**https://gtv.org/video/id=621dfd11019ef64da6533798**](https://gtv.org/video/id=621dfd6c019ef64da65337ce)
+
+发布 : 恩典
+
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/03/IMAGE-2022-02-19-171752.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
