--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,21 +1,17 @@
 ---
-title: 有声&#124;切断SWIFT支付将对中共造成致命打击
+title: 有声&#124;世界各国政要名人对俄罗斯表示谴责
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2089267/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2089313/)
 
 配音：香草山教育部 – 子兵
 ![](https://assets.gnews.org/wp-content/uploads/2021/10/image-105.png)
-2月27日，郭文贵先生在大直播中，详细讲解了切断中共使用SWIFT支付系统，对灭共起到关键作用。
+近日，针对乌克兰危机，世界各国政要相继表示了对俄罗斯的谴责。
 
-首先，SWIFT系统不仅是美元支付系统，更重要的作用是国家信用评级。切断SWIFT支付系统，意味着与50%以上的世界国家经济体断绝经济合作。目前，停止俄罗斯银行使用SWIFT系统，是历史上首次针对主权国家停用。一旦开启SWIFT制裁先例，即使中共不对台开战，停止中共银行使用SWIFT系统，仅是时间问题。
+英国的威廉王子和凯特王妃表示会和世界各地支持乌克兰的人民坚定地站在一起，这是英国王室罕见的政治声明。英国军情六处情报局长表示，俄罗斯在对待乌克兰的战争上必将失败。美国参议员卢比奥提醒美国人自由是多么宝贵，同时对奋起反击的乌克兰人表示赞扬。拜登总统则强调了与欧洲和其他国家合作实施制裁的重要性。
 
-郭先生透露，目前有三个理由对中共实施SWIFT制裁：第一，对新疆实施种族灭绝大屠杀；第二，镇压香港民主运动，杀害无辜的香港平民；第三，制造和释放中共病毒，对全世界发动生化战争。
+除了政要，还有一些名人也发表了看法，好莱坞明星肖恩潘表示，如果美国不加入反抗俄罗斯的队伍，就会失去美国的灵魂。传奇导演大卫·林奇表示，普京发动对乌克兰的战争，造成死亡和毁灭，都一定会被加倍地偿还回来，这是自然法则。
 
-郭先生进一步强调，当SWIFT系统停止中共银行使用后，中国银行28万亿国际业务顷刻消失；中共所有海外贷款和借款，全部立刻停止；建行、招行、农行等所有上市银行股票价格，立刻跌倒零；15万亿GDP化为乌有；中共40%粮食进口和68%外向行经济都将结束。
-
-中共常委的家人在海外均藏匿巨额家族信托资产，一旦被经济制裁，这些人会联手消灭习近平。切断SWIFT系统是对中共釜底抽薪的致命打击。
-
-文字版原文：[切断SWIFT支付将对中共造成致命打击](https://gnews.org/zh-hans/2081404/)
+文字版原文：[世界各国政要名人对俄罗斯表示谴责](https://gnews.org/zh-hans/2079131/)
 
 音频处理：Fei797
 发稿：Fei797
