--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,32 +1,43 @@
 ---
-title: 【秘翻时评】卫星影像曝俄军车绵延64公里 美估近日包围基辅
+title: 纽约市将取消对室内商业餐饮和活动的强制疫苗接种规定
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2089484/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2089747/)
 
-By : **[秘翻时评](https://gtv.org/video/id=621dfd6c019ef64da65337ce)**
+翻译：peacelv
 
-**[2022‑03‑01](https://gtv.org/video/id=621dfd6c019ef64da65337ce)**
+![](https://assets.gnews.org/wp-content/uploads/2022/03/IMG_1626-1.jpg)图片来源：thegatewaypundit.com
 
-**秘翻时评**
+纽约市市长埃里克**·**亚当斯将解除该市对室内商业、餐饮和活动的强制疫苗接种规定，如果**Covid-19**病例继续呈下降趋势。
 
-1.卫星影像曝俄军车绵延64公里 美估近日包围基辅
+“纽约市的病例数字逐日下降，所以，只要Covid指标显示低水平的风险，不出意外这周，在星期一，３月７日我们将会取消Key2NYC规定。”亚当斯宣布。“这将给企业主时间去适应，且也允许我们保证我们是在为纽约人民做最好的公共卫生决定。” NBC新闻报道。
 
-2.壳牌公司準備撤出俄罗斯，抛弃俄罗斯天然气公司交易
+纽约市是美国第一个要求在室内接种疫苗的大城市，它将在未来几天取消对室内商业、餐饮和活动的授权。
 
-3.中共无法撤侨 女硕士防空洞感染中共病毒
+埃里克-亚当斯星期天宣布他的管理团队将在３月７日结束疫苗强制接种规定只要Covid-19病例数量持续下降。他加入了最近几周在西雅图和波士顿等城市做出类似决定的公共官员行列。亚当斯说，只要没有出现意外的高峰，公立学校的室内口罩强制规定也将在同一天取消。
 
-**今日评论内容：**
+纽约针对工人的疫苗强制接种规定仍然有效。
 
-1. 乌克兰男子肉身挡军车 犹如天安门广场坦克人
-2. 新中国联邦大救援 人权和人民高于任何政治
+ESPN:由于纽约市市长埃里克·亚当斯的宣布，一个城市官员告诉WABC-TV 篮球明星凯里·欧文仍将不能在3月7日在巴克莱中心比赛，因为城市针对工人的疫苗强制接种规定仍然有效。
+
+滑稽荒诞。
 
 
-GTV鏈接：[**https://gtv.org/video/id=621dfd11019ef64da6533798**](https://gtv.org/video/id=621dfd6c019ef64da65337ce)
 
-发布 : 恩典
+> Despite NYC Mayor Eric Adams' announcement, a city official told WABC-TV that Kyrie Irving would still not be able to play at the Barclays Center on March 7 as the city's vaccine mandate for workers remains in effect. [pic.twitter.com/te7ILzsH8y](https://t.co/te7ILzsH8y)
+> — ESPN (@espn) [February 27, 2022](https://twitter.com/espn/status/1498067769908154370?ref_src=twsrc%5Etfw)
+
+
+
+**参考资料：**[thegatewaypundit][New York City to Lift Vaccine Mandate For Indoor Businesses, Dining and Events](https://www.thegatewaypundit.com/2022/02/new-york-city-lift-vaccine-mandate-indoor-businesses-dining-events/)
 
 * * *
-![](https://assets.gnews.org/wp-content/uploads/2022/03/IMAGE-2022-02-19-171752.jpg)
+
+*审核：文乐*
+*校对：阿伯塔*
+*发稿：信心的选择*
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-5.jpeg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
