--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,32 +1,34 @@
 ---
-title: 【秘翻时评】卫星影像曝俄军车绵延64公里 美估近日包围基辅
+title: 俄罗斯军队使用大规模杀伤性武器袭击主要城市的平民
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2089484/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2089486/)
 
-By : **[秘翻时评](https://gtv.org/video/id=621dfd6c019ef64da65337ce)**
+翻译：zicoround
 
-**[2022‑03‑01](https://gtv.org/video/id=621dfd6c019ef64da65337ce)**
+![](https://assets.gnews.org/wp-content/uploads/2022/03/https___imgix-proxy.n8s.jp_DSXZQO1653552001032022000000-1-edited.jpg)图片来源：路透社
 
-**秘翻时评**
+在正受到俄罗斯入侵的乌克兰，两军的攻防势态还在增强。据信， 在首都基辅以及第二大的哈尔科夫等主要城市，俄军使用导弹等武器对平民进行的无差别攻击正在扩大。
 
-1.卫星影像曝俄军车绵延64公里 美估近日包围基辅
+1日，乌克兰独立新闻社报道，俄罗斯军队向基辅附近的一家妇产医院发射了炮弹。
 
-2.壳牌公司準備撤出俄罗斯，抛弃俄罗斯天然气公司交易
+据美国CNN等新闻社报道，哈尔科夫市官员指责俄军的入侵是“对乌克兰人的大屠杀”。1日，该市中心的政府大楼与住宅区等也受到导弹袭击，而且攻击愈演愈烈。据路透社报道，乌克兰政府官员表示这起袭击至少造成10名遇难者身亡。
 
-3.中共无法撤侨 女硕士防空洞感染中共病毒
+俄罗斯军队将继续入侵。据互联网通讯社报道，俄罗斯国防部3月1日警告称，将攻击位于基辅的乌克兰当局治安设施，并呼吁周边居民避难。塔斯社报道，俄罗斯国防部长绍伊古1日说，“我们将继续进行特别军事作战，直到预期目标达成为止。”
 
-**今日评论内容：**
+乌克兰驻美国大使周四告诉路透社等多个媒体，俄军在入侵乌克兰时使用了温压弹，这是一种被认为可造成非人道伤害的大规模毁灭性武器。大使批这是“受国际条约限制”的炸弹
 
-1. 乌克兰男子肉身挡军车 犹如天安门广场坦克人
-2. 新中国联邦大救援 人权和人民高于任何政治
+俄罗斯、乌克兰两国2月28日就停火问题在白俄罗斯进行了五个小时的谈判。 有消息称下次谈判将会于3月2日进行，虽然以达成共识为目的但却有很深的鸿沟。一方面乌克兰要求撤出所有俄罗斯军队，而俄罗斯一方则强硬地要求乌克兰的非军事化并保持中立，以及追究现任政府的责任。
 
-
-GTV鏈接：[**https://gtv.org/video/id=621dfd11019ef64da6533798**](https://gtv.org/video/id=621dfd6c019ef64da65337ce)
-
-发布 : 恩典
+**参考资料：**[nikkei][ロシア軍、主要都市で民間人攻撃　大量破壊兵器も使用か](https://www.nikkei.com/article/DGXZQOGR016U80R00C22A3000000/)
 
 * * *
-![](https://assets.gnews.org/wp-content/uploads/2022/03/IMAGE-2022-02-19-171752.jpg)
+
+*审核：天天*
+*校对：宫米叶*
+*发稿：信心的选择*
+
+![](https://assets.gnews.org/wp-content/uploads/2022/03/西喜.jpeg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
