--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,30 +1,24 @@
 ---
-title: 有声&#124;世界各国政要名人对俄罗斯表示谴责
+title: 中共对战乱中的同胞弃之不顾
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2089313/)
+`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/2089299/)
 
-配音：香草山教育部 – 子兵
-![](https://assets.gnews.org/wp-content/uploads/2021/10/image-105.png)
-近日，针对乌克兰危机，世界各国政要相继表示了对俄罗斯的谴责。
+加拿大温哥华杨帆农场 枫叶快讯
 
-英国的威廉王子和凯特王妃表示会和世界各地支持乌克兰的人民坚定地站在一起，这是英国王室罕见的政治声明。英国军情六处情报局长表示，俄罗斯在对待乌克兰的战争上必将失败。美国参议员卢比奥提醒美国人自由是多么宝贵，同时对奋起反击的乌克兰人表示赞扬。拜登总统则强调了与欧洲和其他国家合作实施制裁的重要性。
+采编/编辑撰稿：    Quitman
+![](https://cdn.discordapp.com/attachments/759954055299858513/948271621460861058/d11133f4-8aa2-4919-8d65-06d025f39163.jpg)图片来源：GETTR
+据2月27日盖特新闻，中共住乌克兰大使范先荣当天公开表示，由于乌克兰正与俄罗斯交战，情况危殆。但在没有安全保障的情况下，中共政府暂时不能对身处战乱中的同胞实施救援，必须等到局势安全之后再安排撤侨工作。
 
-除了政要，还有一些名人也发表了看法，好莱坞明星肖恩潘表示，如果美国不加入反抗俄罗斯的队伍，就会失去美国的灵魂。传奇导演大卫·林奇表示，普京发动对乌克兰的战争，造成死亡和毁灭，都一定会被加倍地偿还回来，这是自然法则。
+然而，新中国联邦刚成立不到两年，尽管目前还没有得到世界任何国家的正式承认。但新中国联邦人率先与联合国救援组织密切合作，紧锣密鼓地开始救助被困在乌克兰战火中的中国同胞。迅速动员和集中一切力量和资源，并首批租赁美国最先进的大力神军用运输机10架次甚至更多来进行本次援救工作。 相比处处作恶的中共暴政以及信口雌黄，谎言连篇的大使范先荣，新中国联邦对待中国同胞的态度和所采取的措施实属天壤之别！
 
-文字版原文：[世界各国政要名人对俄罗斯表示谴责](https://gnews.org/zh-hans/2079131/)
+校对编辑：硫酸羟氯喹64
 
-音频处理：Fei797
-发稿：Fei797
+发稿：青青
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/3-9.png)
+原文链接：1，[https://gettr.com/post/px7wihe4ab](https://gettr.com/post/px7wihe4ab)
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+2，[https://gettr.com/post/px6utt349a](https://gettr.com/post/px6utt349a)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
