--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,23 +1,17 @@
 ---
-title: 有声&#124;欧盟宣布对俄罗斯飞机实施全面飞行禁令
+title: 有声&#124;俄对乌部署大规模杀伤性武器引民愤
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2089710/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2089746/)
 
 配音：香草山教育部 – 子兵
 ![](https://assets.gnews.org/wp-content/uploads/2021/10/image-105.png)
-当地时间2月27日，欧盟委员会主席乌苏拉-冯德莱恩在布鲁塞尔宣布，欧盟已经对俄罗斯飞机实施了全面的飞行禁令。
+2月26日下午，一家国外媒体在乌克兰别尔哥罗德市人口密集的郊区，发现了俄军部署的温压武器系统，即TOS-1A重型火焰喷射器，装备了“非制导温压弹头火箭炮”。
 
-冯德莱恩说，该禁飞令针对俄罗斯拥有、注册或控制的飞机。所有这些飞机，包括寡头的私人飞机，现在将不能在任何欧盟国家降落、起飞或飞越。
+温压弹头含有高爆炸性化学混合物，通过高温高压作用实现对目标的整体破坏，为步兵和坦克提供火力支持，在各种攻防战斗中可摧毁敌方火力，让轻型装甲车和运输工具瘫痪。温压炸弹就是真空炸弹，会在爆炸中吸入氧气，可对肌体尤其是肺部造成严重伤害，且能发出超音速冲击波，将建筑物和人体撕裂，使用一次可杀死上万人。
 
-在欧盟正式宣布这一决定前，欧洲国家已经在逐一对俄罗斯关闭其领空。德国说其禁令将持续三个月。英国也禁止俄罗斯飞机进入其领空。
+根据国际共识，温压武器不能滥用于居民区，但俄罗斯在车臣和叙利亚曾使用过它。如今俄军再次将其从军械库拿出并部署到乌克兰境内，外界普遍担心遭受乌克兰顽强抵抗而挫败的俄军，会向基辅等城市滥用这些武器，这将给平民带来非常恐怖的死伤后果。
 
-莫斯科多莫杰多沃机场和谢列梅捷沃机场的出发牌显示，周日有几十个航班被取消，包括前往巴黎、维也纳和加里宁格勒的航班。
-
-俄罗斯S7航空公司在Facebook上说，它将取消前往许多欧洲目的地的航班，至少到3月13日。
-
-欧盟还将禁止俄罗斯的国有新闻机构，它们被广泛视为克里姆林宫的喉舌。据悉，欧盟正在开发工具，以禁止这些新闻机构在欧洲发布有毒和有害的虚假信息。
-
-文字版原文：[欧盟宣布对俄罗斯飞机实施全面飞行禁令](https://gnews.org/zh-hans/2084864/)
+文字版原文：[俄对乌部署大规模杀伤性武器引民愤](https://gnews.org/zh-hans/2085964/)
 
 音频处理：Fei797
 发稿：Fei797
@@ -31,8 +25,6 @@ title: 有声&#124;欧盟宣布对俄罗斯飞机实施全面飞行禁令
 [**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 [**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
 ![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-
-
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
