--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,29 +1,37 @@
 ---
-title: NFSC新闻、G&#124;TV新闻访谈简报&#124;2022年3月1日早
+title: 有声&#124;欧盟宣布对俄罗斯飞机实施全面飞行禁令
 ---
-`纽约香草山MOS01` [轉載自GNews](https://gnews.org/zh-hans/2089693/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2089710/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/2-GNEW-GTV-MOS-LOGO.jpg)
+配音：香草山教育部 – 子兵
+![](https://assets.gnews.org/wp-content/uploads/2021/10/image-105.png)
+当地时间2月27日，欧盟委员会主席乌苏拉-冯德莱恩在布鲁塞尔宣布，欧盟已经对俄罗斯飞机实施了全面的飞行禁令。
 
-作者：香草山翻译部
-![](https://assets.gnews.org/wp-content/uploads/2022/03/GTV_-_Google_.png)
-文章仅代表作者本人观点，与Gnews无关
+冯德莱恩说，该禁飞令针对俄罗斯拥有、注册或控制的飞机。所有这些飞机，包括寡头的私人飞机，现在将不能在任何欧盟国家降落、起飞或飞越。
 
-视频参看：
-[2022.03.01早 《NFSC新闻》](http://中共将会采用第三套方案攻台；俄乌战争的两个结局和俄罗斯的未来)
-[2022.03.01早 G|TV《新闻访谈》](https://gtv.org/video/id=621e27cf019ef64da6534f27)
+在欧盟正式宣布这一决定前，欧洲国家已经在逐一对俄罗斯关闭其领空。德国说其禁令将持续三个月。英国也禁止俄罗斯飞机进入其领空。
 
-编辑： Lakers
-校对： Lakers
-发稿： Lakers
+莫斯科多莫杰多沃机场和谢列梅捷沃机场的出发牌显示，周日有几十个航班被取消，包括前往巴黎、维也纳和加里宁格勒的航班。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/3-524x720-3.jpeg)
+俄罗斯S7航空公司在Facebook上说，它将取消前往许多欧洲目的地的航班，至少到3月13日。
+
+欧盟还将禁止俄罗斯的国有新闻机构，它们被广泛视为克里姆林宫的喉舌。据悉，欧盟正在开发工具，以禁止这些新闻机构在欧洲发布有毒和有害的虚假信息。
+
+文字版原文：[欧盟宣布对俄罗斯飞机实施全面飞行禁令](https://gnews.org/zh-hans/2084864/)
+
+音频处理：Fei797
+发稿：Fei797
+
+![](https://assets.gnews.org/wp-content/uploads/2022/03/3-9.png)
 
 **更多资讯，更多关注**
-[纽约香草山农场GTV-香草山之声](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[纽约香草山农场GTV-MOS TALK 香草山访谈](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[纽约香草山农场Gettr](https://www.gettr.com/user/himalaya_mos)
-[纽约香草山农场 YouTube](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+
 
  
 
