--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,36 +1,32 @@
 ---
-title: 气球飞掠台领空
+title: 【秘翻时评】卫星影像曝俄军车绵延64公里 美估近日包围基辅
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2089369/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2089484/)
 
-作者：台湾宝岛农场 – dobi
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-2月27日，正当全球聚焦俄乌战争之际，中共高空气球近日却频频侵入台湾本岛，后进入东北部以及东部海域上空。台国防安全研究院学者苏紫云认为，应保持警惕。
+By : **[秘翻时评](https://gtv.org/video/id=621dfd6c019ef64da65337ce)**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/Slide13.jpeg)
+**[2022‑03‑01](https://gtv.org/video/id=621dfd6c019ef64da65337ce)**
 
-尽管台国防部分析气球应为气象科研使用，但苏紫云认为，不排除中共在此敏感时期施放高空气球有军事意图，台湾方面应保持警戒，持续严密监控。另据台军事专家揭仲分析，并未发现中共大规模调动人员与物资，因此短时间内不具备对台发动武装攻击的可能性。但揭仲也提醒后续中共有可能增加在台湾周边武力威吓的频率与强度，在南海展示军事力量等。
+**秘翻时评**
 
-此前，郭先生多次警示，普京和习近平早已结成军事、政治联盟，普的野心不止乌克兰，更在欧洲。而习的意图也不仅是台湾，更要拿下亚洲。普习的“双鹰头行动”正在威胁整个世界。台湾应该对目前的局势保持高度的关注和警惕。
+1.卫星影像曝俄军车绵延64公里 美估近日包围基辅
 
-参考链接：
-1. [中共軍隊氣球飄台上空 台學者：應保持警戒](https://www.epochtimes.com/b5/22/2/27/n13609044.htm)
-2. [俄羅斯進攻烏克蘭 軍事專家：不排除中共增加對台武力威嚇強度](https://news.ltn.com.tw/news/politics/breakingnews/3840205)
-3. [郭文貴爆料台灣馬上會有動靜](https://gnews.org/zh-hant/2045939/)
+2.壳牌公司準備撤出俄罗斯，抛弃俄罗斯天然气公司交易
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/三月小图-1.png)
+3.中共无法撤侨 女硕士防空洞感染中共病毒
 
-总编：Zion文恩
-编辑：宁文静
-校正/发稿：谐趣园
+**今日评论内容：**
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+1. 乌克兰男子肉身挡军车 犹如天安门广场坦克人
+2. 新中国联邦大救援 人权和人民高于任何政治
+
+
+GTV鏈接：[**https://gtv.org/video/id=621dfd11019ef64da6533798**](https://gtv.org/video/id=621dfd6c019ef64da65337ce)
+
+发布 : 恩典
+
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/03/IMAGE-2022-02-19-171752.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
