--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,42 +1,31 @@
 ---
-title: 纽约市将取消对室内商业餐饮和活动的强制疫苗接种规定
+title: 囯际足联提议対俄罗斯进行处罚
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2089747/)
+`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/2089782/)
 
-翻译：peacelv
+撰稿：紐約香草山教育部-Naughty(文行）
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/IMG_1626-1.jpg)图片来源：thegatewaypundit.com
-
-纽约市市长埃里克**·**亚当斯将解除该市对室内商业、餐饮和活动的强制疫苗接种规定，如果**Covid-19**病例继续呈下降趋势。
-
-“纽约市的病例数字逐日下降，所以，只要Covid指标显示低水平的风险，不出意外这周，在星期一，３月７日我们将会取消Key2NYC规定。”亚当斯宣布。“这将给企业主时间去适应，且也允许我们保证我们是在为纽约人民做最好的公共卫生决定。” NBC新闻报道。
-
-纽约市是美国第一个要求在室内接种疫苗的大城市，它将在未来几天取消对室内商业、餐饮和活动的授权。
-
-埃里克-亚当斯星期天宣布他的管理团队将在３月７日结束疫苗强制接种规定只要Covid-19病例数量持续下降。他加入了最近几周在西雅图和波士顿等城市做出类似决定的公共官员行列。亚当斯说，只要没有出现意外的高峰，公立学校的室内口罩强制规定也将在同一天取消。
-
-纽约针对工人的疫苗强制接种规定仍然有效。
-
-ESPN:由于纽约市市长埃里克·亚当斯的宣布，一个城市官员告诉WABC-TV 篮球明星凯里·欧文仍将不能在3月7日在巴克莱中心比赛，因为城市针对工人的疫苗强制接种规定仍然有效。
-
-滑稽荒诞。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/8D05FB79-CBA0-45E5-967B-5F8407B72B08.jpeg)
 
 
 
-> Despite NYC Mayor Eric Adams' announcement, a city official told WABC-TV that Kyrie Irving would still not be able to play at the Barclays Center on March 7 as the city's vaccine mandate for workers remains in effect. [pic.twitter.com/te7ILzsH8y](https://t.co/te7ILzsH8y)
-> — ESPN (@espn) [February 27, 2022](https://twitter.com/espn/status/1498067769908154370?ref_src=twsrc%5Etfw)
+国际足联领导层2月27日批准了一系列措施，这些措施将在3月俄罗斯至关重要的世界杯预选赛附加赛中生效。这些措施包括，禁止俄罗斯的名字、国旗和国歌，并为其比赛设立中立场地。
+
+参与世界杯争夺战的另外三个国家波兰、瑞典和捷克共和国表示在任何情况下都拒绝与俄罗斯比赛，以抗议俄罗斯入侵邻国乌克兰。包括国际足联年度世界最佳球员、波兰的罗伯特·莱万多夫斯基在内的几位顶级球员都支持抵制任何涉及俄罗斯的比赛的决定。
+
+其他足球机构已经对俄罗斯采取了行动：欧洲足球管理机构上周剥夺了圣彼得堡今年欧洲冠军联赛决赛的资格，周日英格兰足协表示，在可预见的未来，它不会在任何国际比赛中与俄罗斯比赛。声援乌克兰，并全力谴责俄罗斯领导人的暴行。
+
+波兰足协主席库莱萨称国际足联的决定完全不可接受，他表示波兰国家队不会与俄罗斯一起比赛，无论球队的名称是什么。
+
+瑞典足协主席尼尔森也表示不会与俄罗斯比赛，并敦促国际足联取消 3 月份涉及该国的季后赛比赛。
+
+鏈接：
 
 
 
-**参考资料：**[thegatewaypundit][New York City to Lift Vaccine Mandate For Indoor Businesses, Dining and Events](https://www.thegatewaypundit.com/2022/02/new-york-city-lift-vaccine-mandate-indoor-businesses-dining-events/)
+编輯/校正/发稿：玫瑰圓
+![](https://assets.gnews.org/wp-content/uploads/2022/03/61DA6194-55B4-487B-BB4C-E39649B1FA5C.jpeg)![](https://assets.gnews.org/wp-content/uploads/2022/03/B2D50ED6-E42E-48B6-BC8E-11A155FCC0BB.jpeg)
 
-* * *
-
-*审核：文乐*
-*校对：阿伯塔*
-*发稿：信心的选择*
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-5.jpeg)
 
  
 
