--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,30 +1,43 @@
 ---
-title: 有声&#124;俄对乌部署大规模杀伤性武器引民愤
+title: 纽约市将取消对室内商业餐饮和活动的强制疫苗接种规定
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2089746/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2089747/)
 
-配音：香草山教育部 – 子兵
-![](https://assets.gnews.org/wp-content/uploads/2021/10/image-105.png)
-2月26日下午，一家国外媒体在乌克兰别尔哥罗德市人口密集的郊区，发现了俄军部署的温压武器系统，即TOS-1A重型火焰喷射器，装备了“非制导温压弹头火箭炮”。
+翻译：peacelv
 
-温压弹头含有高爆炸性化学混合物，通过高温高压作用实现对目标的整体破坏，为步兵和坦克提供火力支持，在各种攻防战斗中可摧毁敌方火力，让轻型装甲车和运输工具瘫痪。温压炸弹就是真空炸弹，会在爆炸中吸入氧气，可对肌体尤其是肺部造成严重伤害，且能发出超音速冲击波，将建筑物和人体撕裂，使用一次可杀死上万人。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/IMG_1626-1.jpg)图片来源：thegatewaypundit.com
 
-根据国际共识，温压武器不能滥用于居民区，但俄罗斯在车臣和叙利亚曾使用过它。如今俄军再次将其从军械库拿出并部署到乌克兰境内，外界普遍担心遭受乌克兰顽强抵抗而挫败的俄军，会向基辅等城市滥用这些武器，这将给平民带来非常恐怖的死伤后果。
+纽约市市长埃里克**·**亚当斯将解除该市对室内商业、餐饮和活动的强制疫苗接种规定，如果**Covid-19**病例继续呈下降趋势。
 
-文字版原文：[俄对乌部署大规模杀伤性武器引民愤](https://gnews.org/zh-hans/2085964/)
+“纽约市的病例数字逐日下降，所以，只要Covid指标显示低水平的风险，不出意外这周，在星期一，３月７日我们将会取消Key2NYC规定。”亚当斯宣布。“这将给企业主时间去适应，且也允许我们保证我们是在为纽约人民做最好的公共卫生决定。” NBC新闻报道。
 
-音频处理：Fei797
-发稿：Fei797
+纽约市是美国第一个要求在室内接种疫苗的大城市，它将在未来几天取消对室内商业、餐饮和活动的授权。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/3-9.png)
+埃里克-亚当斯星期天宣布他的管理团队将在３月７日结束疫苗强制接种规定只要Covid-19病例数量持续下降。他加入了最近几周在西雅图和波士顿等城市做出类似决定的公共官员行列。亚当斯说，只要没有出现意外的高峰，公立学校的室内口罩强制规定也将在同一天取消。
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+纽约针对工人的疫苗强制接种规定仍然有效。
+
+ESPN:由于纽约市市长埃里克·亚当斯的宣布，一个城市官员告诉WABC-TV 篮球明星凯里·欧文仍将不能在3月7日在巴克莱中心比赛，因为城市针对工人的疫苗强制接种规定仍然有效。
+
+滑稽荒诞。
+
+
+
+> Despite NYC Mayor Eric Adams' announcement, a city official told WABC-TV that Kyrie Irving would still not be able to play at the Barclays Center on March 7 as the city's vaccine mandate for workers remains in effect. [pic.twitter.com/te7ILzsH8y](https://t.co/te7ILzsH8y)
+> — ESPN (@espn) [February 27, 2022](https://twitter.com/espn/status/1498067769908154370?ref_src=twsrc%5Etfw)
+
+
+
+**参考资料：**[thegatewaypundit][New York City to Lift Vaccine Mandate For Indoor Businesses, Dining and Events](https://www.thegatewaypundit.com/2022/02/new-york-city-lift-vaccine-mandate-indoor-businesses-dining-events/)
+
+* * *
+
+*审核：文乐*
+*校对：阿伯塔*
+*发稿：信心的选择*
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-5.jpeg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
