--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,40 +1,54 @@
 ---
-title: 【转】截至3.2 俄乌战事汇总（2）
+title: 欧盟国家考虑禁止俄罗斯船只入港
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2091951/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2091952/)
 
-#### 采集：文洋
-![](https://assets.gnews.org/wp-content/uploads/2022/03/16461932141.png)
-1. 乌克兰内政部顾问：俄罗斯军队已经进入赫尔松 ，但乌克兰仍控制着城市行政大楼。
-2. 市场消息：俄罗斯乌拉尔石油在欧洲的报价贴水创下新的纪录。
-3. 市场消息：瑞士将向乌克兰运送25吨救援物资。
-4. 市场消息：一些俄罗斯石油公司将银行账户从受制裁的银行转移到罗斯银行 （Rosbank）、裕信银行 （UniCredit）和罗马尼亚银行Raiffeisen，以维持业务运营。
-5. 据当地时间3月1日，联大主席发言人表示，联合国大会紧急特别会议将在美东时间3月2日早10时（北京时间3月2日23:00）就乌克兰提交的决议草案进行投票。决议需要联大超过三分之二的非弃权票投赞同才能通过。
-6. 土耳其总统发言人：乌克兰、俄罗斯代表团很可能不会在周三会面，因俄罗斯有“不切实际”的要求。
-7. 市场消息：欧盟代表们同意进入乌克兰申请加入欧盟的下一阶段。
-8. 美国众议院民主党议员Delauro：对乌克兰的援助金额可能是100亿美元。
-9. 据法新社：国际网球联合会宣布禁止俄罗斯和白俄罗斯的球队参加戴维斯杯比赛。
-10. 市场消息：英国就俄罗斯问题对4名白俄罗斯官员实施制裁。
-11. 市场消息：世界银行寻求启动快速通道基金为乌克兰的发展政策贷款提供3.5亿美元。
-12. 市场消息：海牙国际法院将于3月6日至7日就俄罗斯入侵乌克兰一案举行听证会。
-13. 克里姆林宫：普京签署了一项法令，从3月2日起禁止从俄罗斯提取超过1万美元的外汇。
-14. 当地时间3月1日，白俄罗斯国防部表示，“300辆白俄罗斯坦克驶向乌克兰”的消息是谣言，白俄罗斯没有“坦克集团军”这样的编制。（央视新闻）
-15. 欧盟代表们同意将7家俄罗斯银行排除在环球银行金融电信协会SWIFT之外，但其中没有该国最大银行联邦储蓄银行（Sberbank）和俄罗斯天然气工业银行（Gazprombank）。后者部分为俄罗斯天然气工业股份有限公司所有。根据知情官员透露，俄罗斯外贸银行VTB和Bank Rossiya等银行面临被逐出SWIFT。预计这些措施将于隔夜实施。官员们表示，其他被列入欧盟名单的机构是Bank Otkritie，Novikombank，Promsvyazbank，Sovcombank和VEB.RF。波兰等国家已经敦促将更多俄罗斯银行纳入名单。在正式生效之前，名单仍可能会发生变化。
-16. 克里姆林宫：涉及对俄罗斯不友好国家的实体的证券、房地产业务或提供卢布贷款，将需要特别授权。
-17. 芬兰总理：芬兰将尽快减少对俄罗斯能源的依赖。
-18. 据卫星新闻：波兰开始没收俄罗斯在华沙的财产，包括俄罗斯大使馆下属的学校建筑。
-19. 苹果表示已经暂停了在俄罗斯的所有产品销售，停止所有出口到俄罗斯的销售渠道，将移除俄罗斯以外应用商店的RT新闻和卫星新闻应用。在乌克兰，苹果禁用地图应用上的交通和实时事件。
-20. 国际汽车联合会FIA谴责俄罗斯入侵乌克兰。
-21. 乌克兰请求联合国红十字会帮助建立人道主义走廊。
-22. 俄罗斯联邦外贸银行VTB：VTB银行的手机应用程序可能很快无法在苹果的ios系统上完全顺利运行。
-23. 日本首相岸田文雄：考虑到俄罗斯入侵乌克兰，日本计划制定新的国家安全战略。
-24. 据俄新社：俄罗斯驻联合国特使表示，看不出乌克兰政权有任何尝试为问题找到合法和平衡的解决办法。
-25. 当地时间3月2日，俄罗斯常驻联合国日内瓦办事处代表加季洛夫在接受媒体采访时表示，俄方希望与乌克兰方面继续会谈，并且希望会谈成为政治解决目前问题的开端。但他同时指出，俄方并不相信与乌方的对话能够达成预期结果。
-26. 欧安组织驻乌克兰特别监察团发布消息称，赫尔松、顿涅茨克和哈尔科夫及这些城市的郊区2月28日晚和3月1日晨传来机枪开火和爆炸声。（卫星新闻）
-27. 美国总统拜登：随着新冠肺炎病例的减少，美国的生活正在恢复正常。
-28. 乌克兰国家安全和国防委员会主席奥莱克西·丹尼洛夫在3月1日的简报会上声称，乌克兰军队挫败了一场针对该国总统泽连斯基的暗杀图谋。 根据达尼洛夫的说法，一支名为Kadyrovites的车臣精锐特种部队一直在幕后策划暗杀泽连斯基，但计划随后被挫败。
-29. 日本首相岸田文雄：日本政府没有考虑讨论核共享问题
+![](https://assets.gnews.org/wp-content/uploads/2022/03/image001.png)2022年2月26日，俄罗斯货船 “波罗的海领袖号” 在法国滨海布洛涅的商业港口被扣押。这是欧盟在俄罗斯无端入侵乌克兰后对其实施制裁的结果。(盖蒂图片)
+据《新闻大全》2022年3月1日 报道
 
+欧洲官员说，欧盟国家正在考虑禁止俄罗斯船只进入其港口，目的是停止空中交通限制后加强海上限制，这一步骤将进一步阻碍俄罗斯的商业运输。
+
+英国已经在周一决定拒绝所有由俄罗斯拥有、经营、控制、租赁、注册或悬挂俄罗斯国旗的船只进入英国港口。加拿大在周二紧随其后，说它将在本周晚些时候对俄罗斯船只关闭港口，这是在它禁止俄罗斯原油进口后的第二天。
+
+**“NS ****冠军号****” ****转向丹麦**
+
+Eikon网站上的船舶追踪数据显示，悬挂马绍尔群岛旗帜的 “NS 冠军号” 船，由俄罗斯航运公司索夫康夫洛特（Sovcomflot）运营。在英国宣布禁令后，它周一转而离开英国，并报告说正前往丹麦。船上有石油货物，预计3月2日抵达丹麦。
+
+Eikon船舶追踪数据显示，另外两艘载有液化天然气（LNG）货轮，即由由俄罗斯航运公司索夫康夫洛特运营的，马绍尔群岛拉佩鲁斯（Marshall Islands La Perouse）号和由俄罗斯的亚马尔（Yamal）公司运营的，悬挂塞浦路斯国旗的克里斯托夫·德·马杰里（Christophe De Margerie）号，都将在未来几天内前往法国。
+
+随着全球能源供应的收紧，切断这种运输对欧洲构成了挑战。欧洲与美国和其他盟国一起对俄罗斯入侵乌克兰的行为实施了一系列制裁，莫斯科称这次入侵行动为一次 “特别行动”。
+
+丹麦外交部表示，欧盟外长们在周日讨论了向俄罗斯船只关闭欧洲港口的问题。
+
+外交部在给路透社的一份电子邮件评论中说：“丹麦正在积极争取欧盟做出共同决定，向俄罗斯船只关闭其港口”。
+
+“我们已经决定向俄罗斯飞机关闭丹麦的领空。同时，我们愿意与我们的欧洲伙伴合作，研究新的举措。”
+
+一位法国政府官员告诉路透社，欧盟正在研究更多的制裁措施，对俄罗斯船只关闭港口是一种可能性，但他补充说，任何额外的措施对俄罗斯的影响 “在比例上远远超过对我们自己的经济的影响”。
+
+一位希腊政府官员说，雅典 “将执行欧盟委员会就这一问题作出的任何决定”。
+
+**进一步的制裁尚待实施**
+
+欧盟委员会的一位发言人说，目前没有这种禁令。该发言人补充说：“但我们继续致力于进一步的制裁，这将在适当时候宣布”。
+
+欧洲议会将于周二就一项不具约束力的决议进行表决，要求欧盟港口对俄罗斯船只和进出俄罗斯的船只关闭，但 “必要的合理的人道主义原因” 除外，这可能会增加该集团采取行动的政治压力。
+
+周一，西班牙交通部宣布该国的空域对俄罗斯运营的飞机关闭，并表示它已提议在海事部门采取类似措施。
+
+马德里表示，它正在考虑拒绝俄罗斯船只进入西班牙港口，禁止向其提供燃料或其他物资，甚至阻止俄罗斯或俄罗斯公司拥有的船只进入西班牙水域。
+
+汉堡港务局局长杰斯·迈尔（Jens Meier）周一在一个在线新闻发布会上说，虽然当时没有关于处理俄罗斯船只的明确规定，但他预计不久将宣布 “不再允许什么”。
+
+埃莱尼（Elegny）公司是恩吉（Engie）公司拥有的天然气运输和储存公司，负责运营亚马尔的克里斯托夫·德·马杰里所在的蒙托尔码头。当被问及是否收到政府或地方当局，关于处理该货物的任何指示时，该公司没有立即作出回应。
+
+**索夫康夫洛特船务公司首先受到限制**
+
+索夫康夫洛是被美国财政部上周限制，在美国市场融资的俄罗斯实体之一，航运界人士称，这将使这家在莫斯科上市的公司的交易变得复杂。
+
+原文链接：[https://www.newsmax.com/world/globaltalk/eu-shipping-industry-russia-ukraine/2022/03/01/id/1059092/](https://www.newsmax.com/world/globaltalk/eu-shipping-industry-russia-ukraine/2022/03/01/id/1059092/)
+
+翻译：烟波浩淼 | 校对：雨山溪桥客 | 编辑&发布：断播
 
  
 
