--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,30 +1,21 @@
 ---
-title: 拜登称泽伦斯基在俄罗斯对乌克兰的残酷战争中 &#8220;鼓舞了世界&#8221;
+title: 中日财经爆&#124;七国集团将冻结俄罗斯权贵资产
 ---
-`波士顿五月花农场金融部` [轉載自GNews](https://gnews.org/zh-hans/2091936/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2091943/)
 
-素材：波士顿五月花Vicky
-![](https://assets.gnews.org/wp-content/uploads/2022/03/Screen-Shot-2022-03-02-at-11.48.14-AM.png)图片来源：互联网
-拜登总统在周二晚上的国情咨文中说，乌克兰总统沃尔德米尔-泽伦斯基 “激励着世界”，因为他留在该国首都基辅，而基辅正被俄罗斯军队围困。
+撰稿：东京樱花团/peterwong
+![](https://assets.gnews.org/wp-content/uploads/2022/03/image-136.png)[图片来源](https://www.reuters.com/world/g7-finmins-discussed-further-sanctions-vs-russia-germanys-lindner-2022-03-01/)
+美国财政部长耶伦(Janet Yellen)周二（3月1日）表示，七国集团(G7)将召集一个特别工作组，重点是冻结和扣押俄罗斯主要权贵人士的资产，目的是在俄罗斯入侵乌克兰后对其进一步施加压力。
 
-“六天前，俄罗斯的弗拉基米尔-普京试图动摇自由世界的根基，认为他可以让世界屈服于他的威胁。但他严重失算了。拜登说：”他以为他可以进入乌克兰，世界就会翻身。”相反，他遇到了……一堵他从未预料到或想象到的力量之墙。他遇到了乌克兰人民和泽伦斯基总统。”
+叶伦在G7财长线上会议后的声明中称，此举 “将给普京周围有权势的人带来经济上的痛苦，并清楚地表明，没有人是我们的集体行动所不能及的。”
 
-拜登补充说：”每一个乌克兰人，他们的无畏精神，他们的勇气决心，实际上激励着全世界。”
+她并称，G7还将继续支持把俄罗斯主要金融机构从SWIFT支付系统中剔除，并补充说G7预计迄今为止实施的制裁将 “束缚俄罗斯政府为其入侵提供资金的能力。”
 
-总统发表这番言论时，美国和欧洲正在对俄罗斯进行一连串的制裁，旨在惩罚它的战争，而且美国和其他许多国家正在向乌克兰提供武器。
+消息来源：[G7将冻结俄罗斯精英人士的资产–美国财长](https://cn.reuters.com/article/yellen-g7-ru-elites-assets-0302-idCNKBS2KZ05I?il=0)
 
-俄罗斯总统弗拉基米尔-普京(Vladimir Putin)在上个月发动全面入侵之前，命令其军队大部分在乌克兰边境集结。俄罗斯军队正在努力夺取乌克兰的主要城市，如其首都基辅，但随着战争时间的延长，他们使用的兵力明显增多。
-
-这包括一个长达数英里的装甲车车队，该车队目前正在前往基辅的路上–尽管据一名高级国防官员称，由于天然气短缺，这一行动 “陷入了困境”。
-
-拜登周二陈述了制裁对俄罗斯经济已经产生的巨大影响，以及西方国家在应对方面的团结一致。许多国家，”甚至是瑞士，都在给俄罗斯施加痛苦，支持乌克兰人民。普京现在比以往任何时候都更加孤立于世界，”拜登在全场起立鼓掌中说。
-
-原文链接：[Biden says Zelenskyy ‘inspires the world’ amid brutal Russian war on Ukraine](https://www.foxnews.com/politics/biden-zelenskyy-putin-russia-ukraine-inspire-world)
-
-* * *
-
-*编辑&发布：Vicky*
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/03/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
