--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,23 +1,27 @@
 ---
-title: 关闭SWIFT对中国影响
+title: 美国跨党派参访团，支持捍卫43年台湾关系法
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2091879/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2091898/)
 
-SWIFT绝对是中共的致命，而且香港瞬间就全完了。
+美国总统拜登指派由前参谋首长联席会议主席穆伦率领的跨党派访问团昨抵台，特使团今日上午先后晋见蔡英文总统与副总统赖清德。面对乌克兰情势，蔡总统说，对侵略行为冷眼姑息，就是为自己制造更多威胁。乌克兰经验告诉我们民主国家相互合作与积极作为，是至为关键。穆伦则表示，美国反对片面改变现状行为，透过访台向区域伙伴传达美国坚定维持承诺。
 
-**【郭先生直播摘要】**** 2022.2.267 ****关闭****SWIFT****对中国影响**
+这是拜登第二度派遣特使团访台，去年4月拜登派好友前参议员托德率团访台。这次访团由穆伦率领，成员有前国防部政策次长傅洛依、前白宫副国安顾问欧苏莉文、前白宫国安会亚洲事务资深主任葛林及麦艾文。
 
-**郭先生：**
+蔡英文首先致词表示，在全球密切关注乌克兰情势此刻，拜登政府指派跨党派资深访团来台，说明对台美伙伴关系的重视，并凸显台湾在区域与国际社会角色，而国际民主社群必须更加团结。
 
-大家看到SWIFT整个系统，它不仅仅是一个支付系统，它最重要的事情是对整个国家信用评级。那对中共国什么概念？我给大家举个例子，一个中国银行要不让用SWIFT中国银行立马死，它不但没了，它所有的海外贷款，所有借款都得暂时停下来。中国银行在国际上的业务二十八万亿美元，所有的中国的所谓的建行、招商银行、农业银行，这是上市公司、上市银行立马几乎跌到零。
+她接着说，俄罗斯入侵乌克兰严重破坏国际和平与秩序，对于侵略行为，台湾作为国际社会一员，除了严厉谴责，也参与制裁俄罗斯行动，对乌克兰人道救援也已经启动。这坚定表达台湾与乌克兰站在一起，与自由民主站在一起，只要有助于国际社会和平安全与区域稳定繁荣，台湾愿意善尽国际责任与所有国家一起投注努力。
 
-你是请来了所有人来开Party，我把你火给熄了。今天的Party成为你的噩梦，一切都将结束。只要SWIFT系统一说干掉，共产党必死无疑。韩正就得掐死习近平，你放心韩正在外面的钱最起码几百亿美元。你知道SWIFT停了以后啥感觉吗？韩正第一个把他弄死，因为现在他的八百亿所有的钱，里面投资来投资去各种金融操作，都跟上海帮马云、阿里巴巴、恒大房地产、上石、上海信托都连在一起瞬间就变成零。SWIFT绝对是中共的致命，而且香港瞬间就全完了。香港的四大不要脸瞬间就变成画皮了，飘落在地上。
+蔡总统说，历史经验告诉我们，对侵略行为冷眼姑息，就是为自己制造更多威胁。这是全球民主国家团结的时刻，台湾也不能缺席。尤其乌克兰人民捍卫自由民主信念与保护自己国家的决心，让身处民主国家的台湾感同身受，当前中国对台海与区域军事威胁持续升高，**无论打压台湾国际空间，进行认知作战并操作错假讯息分化台湾社会与侵蚀民主，这些动作没有一天停止，而台湾人民没有因此放弃坚持。**我们愿意投入更多努力让台湾成为更具韧性的民主之岛。
 
-关于SWIFT这个网有什么弊？对共产党SWIFT有两个级别，一个就是我们说的断网。你啥都没了，就不让你用了断网了。第二个我有条件的限制性的某种货币让你交易。但我觉得美国一定给它断网的，而且我觉得美国对中共SWIFT制裁的时候，一定是三件事一起干。
+总统强调，我们要告诉全世界，台湾有坚定自我防卫决心，也会守护民主生活方式，而区域稳定安全从来不是单一国家课题，乌克兰经验告诉我们民主国家相互合作与积极作为，是至为关键。面对台海与区域安全威胁，除期待与美国与区域各方能有更多紧密合作，共同压制各种型态可能冲击安全单边行为，以维持区域和平稳定。也**感谢拜登政府以实际行动依据台湾关系法以及六项保证履行对台湾安全承诺，而拜登政府公布印太战略指台湾是重要伙伴**，而台湾不只是重要伙伴，更是最值得信任的伙伴，拥有更多支持的台湾将会更具贡献，她期待台美伙伴关系更加紧密，为印太区域与全世界和平稳定做出更多贡献。
 
-第一件事查封你所有海外的所谓共产党的国有资产和中共领导人资产。一定不会像对俄罗斯一样，习近平也不可能开账号，习近平的还有韩正这帮孙子所有家人的账号肯定给他封了。个人资产，整个个人财富全封，断网和个人财富全封。第三个是干什么事情呢？对老共更加狠的，把互联网整个互联网给它断了。
+接着致词的穆伦说，在蔡总统有力领导下，不仅在台湾，区域和平的重要性更胜以往。他率领代表团是表达对美台伙伴关系的支持，在此关键时刻访台，如同拜登总统指民主面临艰难挑战，乌克兰即是，此刻更需要捍卫民主。他并肯定能访问世界上最具民主活力的地方之一，台湾无论对疫情与假讯息的挑战，在因应之余都能兼顾民主价值。
 
-视频剪辑：GC |听写：雨山溪桥客|翻译：Arthur | 校对：烟波浩淼 | 视频制作+字幕：刀锋舞者 | 编辑：昆汀 | 发布：断播
+**穆伦还说，这次访团反映美国跨党派对台的强健支持，这并符合美国与全球利益，也说明美国继续反对片面改变现状行为，并持续支持符合台湾人民意愿与最佳方式和平解决两岸议题，透过访问也向区域伙伴传达美国坚定维持承诺。他并提到****4****月是台湾关系法签署****43****周年，拜登当年在议员任内投下赞成票，美台关系将比以往更能强健合作。**
+
+**[接见拜登特使团 总统︰台湾有坚定防卫决心 期待与美更紧密合作](https://news.ltn.com.tw/news/politics/breakingnews/3845642)**
+
+审核:Athena雅典娜 发布:Amitofu
 
  
 
