--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,82 +1,23 @@
 ---
-title: 也许是时候世界支持台湾合法政府的独立了
+title: 关闭SWIFT对中国影响
 ---
-`美国政要直译推` [轉載自GNews](https://gnews.org/zh-hans/2091836/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2091879/)
 
-参议员马可.卢比奥： 由于 [#中共国](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1%E5%9B%BD?src=hashtag_click) [#China](https://twitter.com/hashtag/China?src=hashtag_click) 支持承认俄罗斯在 [#乌克兰](https://twitter.com/hashtag/%E4%B9%8C%E5%85%8B%E5%85%B0?src=hashtag_click) [#Ukraine](https://twitter.com/hashtag/Ukraine?src=hashtag_click) 的傀儡的独立，也许是时候世界支持 [#台湾](https://twitter.com/hashtag/%E5%8F%B0%E6%B9%BE?src=hashtag_click) [#Taiwan](https://twitter.com/hashtag/Taiwan?src=hashtag_click) 合法政府的独立了
+SWIFT绝对是中共的致命，而且香港瞬间就全完了。
 
+**【郭先生直播摘要】**** 2022.2.267 ****关闭****SWIFT****对中国影响**
 
+**郭先生：**
 
-> Since [#China](https://twitter.com/hashtag/China?src=hash&amp;ref_src=twsrc%5Etfw) supports recognizing the independence of Russian puppets in [#Ukraine](https://twitter.com/hashtag/Ukraine?src=hash&amp;ref_src=twsrc%5Etfw) maybe its time the world supports the independence of the legitimate government of [#Taiwan](https://twitter.com/hashtag/Taiwan?src=hash&amp;ref_src=twsrc%5Etfw)
-> — Marco Rubio (@marcorubio) [March 2, 2022](https://twitter.com/marcorubio/status/1498825760924176391?ref_src=twsrc%5Etfw)
+大家看到SWIFT整个系统，它不仅仅是一个支付系统，它最重要的事情是对整个国家信用评级。那对中共国什么概念？我给大家举个例子，一个中国银行要不让用SWIFT中国银行立马死，它不但没了，它所有的海外贷款，所有借款都得暂时停下来。中国银行在国际上的业务二十八万亿美元，所有的中国的所谓的建行、招商银行、农业银行，这是上市公司、上市银行立马几乎跌到零。
 
+你是请来了所有人来开Party，我把你火给熄了。今天的Party成为你的噩梦，一切都将结束。只要SWIFT系统一说干掉，共产党必死无疑。韩正就得掐死习近平，你放心韩正在外面的钱最起码几百亿美元。你知道SWIFT停了以后啥感觉吗？韩正第一个把他弄死，因为现在他的八百亿所有的钱，里面投资来投资去各种金融操作，都跟上海帮马云、阿里巴巴、恒大房地产、上石、上海信托都连在一起瞬间就变成零。SWIFT绝对是中共的致命，而且香港瞬间就全完了。香港的四大不要脸瞬间就变成画皮了，飘落在地上。
 
+关于SWIFT这个网有什么弊？对共产党SWIFT有两个级别，一个就是我们说的断网。你啥都没了，就不让你用了断网了。第二个我有条件的限制性的某种货币让你交易。但我觉得美国一定给它断网的，而且我觉得美国对中共SWIFT制裁的时候，一定是三件事一起干。
 
-参议员玛莎·布莱克本： 在对乌克兰采取了令人发指的行动后，俄罗斯不配获得联合国安理会的席位。
+第一件事查封你所有海外的所谓共产党的国有资产和中共领导人资产。一定不会像对俄罗斯一样，习近平也不可能开账号，习近平的还有韩正这帮孙子所有家人的账号肯定给他封了。个人资产，整个个人财富全封，断网和个人财富全封。第三个是干什么事情呢？对老共更加狠的，把互联网整个互联网给它断了。
 
-
-
-> Russia does not deserve a seat on the UN Security Council after its egregious actions toward Ukraine. [pic.twitter.com/qz24oQcHMK](https://t.co/qz24oQcHMK)
-> — Sen. Marsha Blackburn (@MarshaBlackburn) [March 2, 2022](https://twitter.com/MarshaBlackburn/status/1498829680509693954?ref_src=twsrc%5Etfw)
-
-
-
-参议员玛莎.布莱克本： 联合国必须剥夺俄罗斯在安理会的否决权。
-
-
-
-> The UN must strip Russia of its ability to veto in the security council.
-> — Sen. Marsha Blackburn (@MarshaBlackburn) [March 1, 2022](https://twitter.com/MarshaBlackburn/status/1498787977719431172?ref_src=twsrc%5Etfw)
-
-
-
-拜登总统： 普京总统认为他可以顺利挺进乌克兰——世界将会接受。 相反，他遇到了他从未想到过的强力阻击。 他遇到了(强大的)乌克兰人民。
-
-
-
-> President Putin thought he could roll into Ukraine — and the world would roll over.
->  
-> Instead, he met a wall of strength he never imagined.
->  
-> He met the Ukrainian people.
-> — President Biden (@POTUS) [March 2, 2022](https://twitter.com/POTUS/status/1498843134721150979?ref_src=twsrc%5Etfw)
-
-
-
-拜登总统： 美国司法部正在组建一个专门的工作组来追查俄罗斯寡头的罪行。 我们正与我们的欧洲盟友一起寻找并没收他们的游艇、豪华公寓和私人飞机。 我们不会放过他们的不义之财。
-
-
-
-> The U.S. Department of Justice is assembling a dedicated task force to go after the crimes of Russian oligarchs.
->  
-> We are joining with our European allies to find and seize their yachts, their luxury apartments, their private jets. 
->  
-> We are coming for their ill-begotten gains.
-> — President Biden (@POTUS) [March 2, 2022](https://twitter.com/POTUS/status/1498844556300886022?ref_src=twsrc%5Etfw)
-
-
-
-比尔·格茨: 拜登今晚没有提到要让 [#中共](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1?src=hashtag_click) 对传播导致大流行的 [#中共病毒](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92?src=hashtag_click) 负责。[#中共](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1?src=hashtag_click) 放出致命病毒，是邪恶的，必须承担责任，否则北京将制造更多致命的瘟疫。
-
-
-
-> Biden tonight made no mention of holding Communst China accountable for spreading the virus that caused the pandemic. The CCP unleashed the deadly virus, is evil, and must be held responsible or Beijing will create even more deadly plagues
-> — Bill Gertz (@BillGertz) [March 2, 2022](https://twitter.com/BillGertz/status/1498854110472278016?ref_src=twsrc%5Etfw)
-
-
-
-参议员玛莎·布莱克本： 同意劳拉·英格拉汉姆[@IngrahamAngle](https://twitter.com/IngrahamAngle) – 拜登必须制裁 [#中共](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1?src=hashtag_click) 支持俄罗斯入侵乌克兰的行径。 俄罗斯、[#中共国](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1%E5%9B%BD?src=hashtag_click)、伊朗和北朝鲜是新的邪恶轴心国。 必须阻止他们。
-
-
-
-> Agree with [@IngrahamAngle](https://twitter.com/IngrahamAngle?ref_src=twsrc%5Etfw) – Biden must sanction Communist China for bolstering Russia’s invasion of Ukraine.
->  
-> Russia, China, Iran and North Korea are the new axis of evil.
->  
-> They must be stopped. [https://t.co/dmx0r74mcE](https://t.co/dmx0r74mcE)
-> — Sen. Marsha Blackburn (@MarshaBlackburn) [March 2, 2022](https://twitter.com/MarshaBlackburn/status/1498835382389125120?ref_src=twsrc%5Etfw)
-
-
+视频剪辑：GC |听写：雨山溪桥客|翻译：Arthur | 校对：烟波浩淼 | 视频制作+字幕：刀锋舞者 | 编辑：昆汀 | 发布：断播
 
  
 
