--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,28 +1,21 @@
 ---
-title: 俄军士兵请放下屠刀 为普京送命只值105美金
+title: 美国石油巨头退出俄罗斯
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2092019/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2092035/)
 
-**作者:  **青衣
-![](https://assets.gnews.org/wp-content/uploads/2022/03/1-20.jpg)
-图为俄罗斯武装部队（图片来自网络）
+撰稿：东京樱花团/百花李香
+![](https://assets.gnews.org/wp-content/uploads/2022/03/image-142.png)[图片来源](https://www.ft.com/content/64bb733e-2266-4bef-8a86-289afb8d18ad#:~:text=ExxonMobil%20racks%20up%20a%20third%20straight%20loss%20as%20pandemic%20dents%20demand)
+美国石油巨头埃克森美孚公司3月1日宣布，将退出俄罗斯远东萨哈林沿海的石油和天然气开发项目（萨哈林1号）。该项目日本公司也有参与其中。
 
-俄罗斯悍然发动对乌克兰的侵略战争，目前双方都死伤惨重。而为俄罗斯卖命的俄军士兵，竟然命贱到每人抚恤金只有105美金！
+在俄罗斯入侵乌克兰后，国际上正在不断推出对俄经济制裁的情况下，该公司放弃了继续实施该项目的计划。并表示强烈谴责俄罗斯的军事行动。随着俄罗斯侵略的加剧，它将不会在俄罗斯进行任何新的投资。
 
-据《阿波罗新闻网》3月2日报道，俄罗斯总统普京2月24日派兵入侵乌克兰，至今已近一周时间。目前两军死伤惨重，但俄方直至2月28日才公布有俄军官兵伤亡。而俄军士兵阵亡的家属抚恤金，一人竟仅能拿到11000卢布，相当于105美元。
+除了埃克森公司、由日本政府资助的萨哈林油气开发公司、伊藤忠商事株式会社、丸红株式会社、日本石油勘探公司以及其它公共和私营实体，俄罗斯国有石油巨头俄罗斯石油公司和一家印度公司也参与了萨哈林1号项目。埃克森公司负责项目的运营，而日本公司拥有30%的股份。
 
-前乌克兰官员萨姆利尼（Sergej Sumlenny）周二在推特上转发俄罗斯电视台发布的消息，指出俄罗斯士兵若在战争中阵亡，俄国政府会给家属每人抚恤金11000卢布（约105美元）。
+信息源：[米エクソン、「サハリン1」撤退　ロシア石油・ガス開発事業　日本企業も参画](https://news.yahoo.co.jp/articles/0897ed8c5fc6b370ec5fda936d78b57c0e5546ab#:~:text=)
 
-而与此同时，乌克兰国防部长列兹尼科夫（Oleksii Reznikov）透过脸书招降俄军，表示俄军若投降，将给予500万卢布（大约5万美元）的现金或加密货币，呼吁俄军展开新生活。
-
-为普京发动的侵略战争卖命，不仅如此命贱，并且还将背上历史的骂名。俄军士兵们，放下屠刀吧，该做出你们正确的选择了。
-
-新闻链接：
-
-[https://www.aboluowang.com/2022/0302/1715365.html?utm\_source=dlvr.it&utm\_medium=twitter](https://www.aboluowang.com/2022/0302/1715365.html?utm_source=dlvr.it&amp;utm_medium=twitter)
-
-* * *
-
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/03/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
