--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,64 +1,17 @@
 ---
-title: 文•贵天成——文贵先生谈“普京”（十）
+title: 中共自知命不久矣 两会在即立下遗言
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2091987/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2092001/)
 
-整理：BENJ1
-编辑：Kelly
+撰稿：东京樱花团/加一颗稻草
+![](https://assets.gnews.org/wp-content/uploads/2022/03/image-141.png)[图片来源](https://www.google.com/imgres?imgurl=http%3A%2F%2Fimgcdn.yicai.com%2Fvms-new%2F2022%2F03%2F8d29c2ac-1f25-4952-a7c2-876fcf5fbbd7.jpg&amp;imgrefurl=https%3A%2F%2Fwww.yicai.com%2Fnews%2F101332570.html&amp;tbnid=kDeDhOTY8soEoM&amp;vet=12ahUKEwi-yq3Nxab2AhUe73MBHf8pADoQMygEegUIARC1AQ..i&amp;docid=8P8gf-GNvG2MYM&amp;w=886&amp;h=488&amp;itg=1&amp;q=%E4%B9%A0%E8%BF%91%E5%B9%B3%E5%9C%A8%E4%B8%AD%E5%A4%AE%E5%85%9A%E6%A0%A1&amp;ved=2ahUKEwi-yq3Nxab2AhUe73MBHf8pADoQMygEegUIARC1AQ)
+央视网2022年3月2日报道，习近平在中央党校(国家行政学院)中青年干部培训班开班式上发表讲话强调，巩固理想信念根基，树立践行正确政绩观，在新时代新征程上留下无悔的奋斗足迹。
 
-- ![文章配图](https://assets.gnews.org/wp-content/uploads/2022/03/1-7.png)图片来源：雅典娜设计组（614）
+中共历来中冠冕堂皇的话语来掩盖其卑鄙的统治手段。现在由小编我来为大家逐句解释这段新闻的内在意图。1、他给中青年干部讲话，说明老的干部已经不被信任了，只有忽悠这些没有根基的愣头青。2、强调巩固根基说明这个根基已经出问题了。一个破旧的建筑不想倒下只有维护根基这一个办法。3、要求树立正确的政绩观，是告诉这些人靠经济出政绩已经不行了，维稳是现在的政绩观。4、最后一句话才是重中之重，在目前的国际、国内的形式面前已经没有退路了。宗上所述，中共已经穷途末路正在准备做垂死挣扎。
 
-
-郭文贵先生**2021**年**9**月**12**日直播
-
-可以告诉大家，我今天爆的这个料，全地球全星空也不会有几个人知道，记住我今天爆的这个料：世界上最大的一单回扣、中介费，单笔的，地球有人类以来，有史以来，就是这个了。
-
-中俄石油的回扣是多少钱呢？当年普京在上海，普京和习签的是4600亿美元，他的回扣是多少呢？总共拿了100亿美元，就没按比例拿，是100亿美元。
-
-郭文贵先生**2021**年**9**月**14**日直播
-
-俄罗斯最早是普京说的，谁也不能强迫别人打疫苗。大家懂这意思了吗？能听我懂吧？我不能明说。他闺女打疫苗完全是假的，百分之百是假的，打的是胸腺肽、白蛋白。
-
-郭文贵先生**2021**年**9**月**20**日直播
-
-我是昨天确认了，梅德耶夫和普京，肯定没打（疫苗）。咱们的这好几个俄罗斯的哥们确定，（他俩）肯定没打（疫苗）。
-
-郭文贵先生**2021**年**9**月**29**日直播
-
-强势的普京，可以这么说，符合俄罗斯的利益，我觉得普京是俄罗斯过去这几代领导人里干的最好的，而且普京是在德国呆过的，他对德国的文化很了解的，我深信未来影响欧洲最大的人物就是普京，你不能忽视这个人物。
-
-俄罗斯整个的天然气管道，整个西输管道被欧洲、被美国给叫停，这个问题搞了那么多年了，我觉得普京的时代一定会给你开启。普京要想达到整个东气西输，想用整个俄罗斯的石油来替代大部分中东的石油，特别是给德国和英国，德国这一届政党里面可能从亲中完全转向亲俄，而且俄国会对德国、对欧洲特别的示弱，但在能源上会大量的合作。
-
-郭文贵先生**2021**年**10**月**5**日直播
-
-昨天Facebook断网，一看那就是俄罗斯出手了，还用说吗？俄罗斯是告诉你，别跟我玩，你差的远着呢，老子一个屁都崩死你。普京真的是拔个汗毛都能把Facebook弄死个一万回，他敢出手，习不敢出手，共产党不敢出手。昨天就是俄罗斯干的，跟中国半毛钱关系没有。
-
-郭文贵先生**2021**年**11**月**28**日直播
-
-习对世界的认知是很狭隘的，甚至对事业、对政治、对能力是不自信的。但到了美国被奥巴马给羞辱之后，转驾俄罗斯，普京跟他结为战友，绝对的战友——“咱俩一起死磕，这个世界就是咱的了。”
-
-资料来源：郭先生GTV和盖特直播视频
-
-往期回顾：
-[文•贵天成——文贵先生谈“普京”（一）](https://gnews.org/zh-hans/1990454/)
-[文•贵天成——文贵先生谈“普京”（二）](https://gnews.org/zh-hans/1992091/)
-[文•贵天成——文贵先生谈“普京”（三）](https://gnews.org/zh-hant/1997918/)
-[文•贵天成——文贵先生谈“普京”（四）](https://gnews.org/zh-hans/1998162/)
-[文•贵天成——文贵先生谈“普京”（五）](https://gnews.org/zh-hans/1998174/)
-[文•贵天成——文贵先生谈“普京”（六）](https://gnews.org/zh-hans/1998177/)
-[文•贵天成——文贵先生谈“普京”（七）](https://gnews.org/zh-hans/2002397/)
-[文•贵天成——文贵先生谈“普京”（八）](https://gnews.org/zh-hans/2090925/)
-[文•贵天成——文贵先生谈“普京”（九）](https://gnews.org/zh-hans/2090993/)
-
-发布：tianzhihuan
-
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/03/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
