--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,54 +1,43 @@
 ---
-title: 欧盟国家考虑禁止俄罗斯船只入港
+title: 封城在即，香港出现抢购潮和离港潮
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2091952/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2091956/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image001.png)2022年2月26日，俄罗斯货船 “波罗的海领袖号” 在法国滨海布洛涅的商业港口被扣押。这是欧盟在俄罗斯无端入侵乌克兰后对其实施制裁的结果。(盖蒂图片)
-据《新闻大全》2022年3月1日 报道
+#### 【雅典娜快讯】，紧贴时代脉搏
 
-欧洲官员说，欧盟国家正在考虑禁止俄罗斯船只进入其港口，目的是停止空中交通限制后加强海上限制，这一步骤将进一步阻碍俄罗斯的商业运输。
+翻译/编辑：文泓
 
-英国已经在周一决定拒绝所有由俄罗斯拥有、经营、控制、租赁、注册或悬挂俄罗斯国旗的船只进入英国港口。加拿大在周二紧随其后，说它将在本周晚些时候对俄罗斯船只关闭港口，这是在它禁止俄罗斯原油进口后的第二天。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/03/4-5.png)图片来源：The New York Times & Business Insider
 
-**“NS ****冠军号****” ****转向丹麦**
 
-Eikon网站上的船舶追踪数据显示，悬挂马绍尔群岛旗帜的 “NS 冠军号” 船，由俄罗斯航运公司索夫康夫洛特（Sovcomflot）运营。在英国宣布禁令后，它周一转而离开英国，并报告说正前往丹麦。船上有石油货物，预计3月2日抵达丹麦。
+当地时间3月1日，据德国之声报道，由于港共政府仍未明确表示是否将在3月执行严格的封城令，令本地超市和商店出现了恐慌性抢购潮，今天香港市民将货架上的商品一扫而空。对于充满不确定性的未来，一些跨国公司和居民选择离开香港。
 
-Eikon船舶追踪数据显示，另外两艘载有液化天然气（LNG）货轮，即由由俄罗斯航运公司索夫康夫洛特运营的，马绍尔群岛拉佩鲁斯（Marshall Islands La Perouse）号和由俄罗斯的亚马尔（Yamal）公司运营的，悬挂塞浦路斯国旗的克里斯托夫·德·马杰里（Christophe De Margerie）号，都将在未来几天内前往法国。
+对于封锁规则的担忧使香港市民涌向超市、药局和蔬菜店扫货。社交媒体上流传的照片显示，各种物资包括肉类、蔬菜、冷冻食品、面条、止疼片和检测试剂盒已经几乎售完。
 
-随着全球能源供应的收紧，切断这种运输对欧洲构成了挑战。欧洲与美国和其他盟国一起对俄罗斯入侵乌克兰的行为实施了一系列制裁，莫斯科称这次入侵行动为一次 “特别行动”。
+过去的两个月内，香港新增了超过19万新冠病例。这个金融中心正处于最严重的奥密克戎疫情高峰期，每天都有数以万计的新病例，自疫情发生以来的所谓“清零策略”被攻破，让医院人满为患。
 
-丹麦外交部表示，欧盟外长们在周日讨论了向俄罗斯船只关闭欧洲港口的问题。
+港共当局计划在本月对其740万居民进行全民检测，并将所有感染者隔离在家中，或安置于由中国大陆协助建造的临时医院内。在未来几周内，香港政府将建设更多专门接收轻症病患的临时医院。
 
-外交部在给路透社的一份电子邮件评论中说：“丹麦正在积极争取欧盟做出共同决定，向俄罗斯船只关闭其港口”。
+林郑月娥早前称，将不会实施如大陆式的严格封锁策略，即在检测期间把居民限制在家中，不得外出。不过，在2月28日香港食物及卫生局局长陈肇始证实“硬封城”仍是一个选项。而当日，多家香港媒体也援引消息人士表示，当局正计划尝试多种限制方案，打算于全民检测期间实施。
 
-“我们已经决定向俄罗斯飞机关闭丹麦的领空。同时，我们愿意与我们的欧洲伙伴合作，研究新的举措。”
+作为全球人口密度最高的城市之一，香港超市的储藏空间有限。而在该座城市里的多数公寓也相当狭小，没有多少空间可以储存物资。
 
-一位法国政府官员告诉路透社，欧盟正在研究更多的制裁措施，对俄罗斯船只关闭港口是一种可能性，但他补充说，任何额外的措施对俄罗斯的影响 “在比例上远远超过对我们自己的经济的影响”。
+香港绝大部分的食品都从中国大陆进口，而目前因为跨境卡车司机被高传播性的奥密克戎变种感染，使物资供应变得更加紧张。香港政府周一稍晚向市民喊话说，食品供应保持不变，不需要恐慌性购买。
 
-一位希腊政府官员说，雅典 “将执行欧盟委员会就这一问题作出的任何决定”。
+在香港，人们对政府承诺的可信度很低，在一系列的反送中运动之后，两年以来，当局对异议人士进行打压，对给出的承诺曾出尔反尔。
 
-**进一步的制裁尚待实施**
+疫情爆发和政府防疫措施也使得人口外流加快，《钜亨网》引用香港政府数据报导，2月14日至20日当周，香港有2万7千多人离境，为新冠肺炎疫情以来最高峰。
 
-欧盟委员会的一位发言人说，目前没有这种禁令。该发言人补充说：“但我们继续致力于进一步的制裁，这将在适当时候宣布”。
+参考链接：[担心封城 香港出现抢购潮和离港潮](https://www.dw.com/zh/%E6%8B%85%E5%BF%83%E5%B0%81%E5%9F%8E-%E9%A6%99%E6%B8%AF%E5%87%BA%E7%8E%B0%E6%8A%A2%E8%B4%AD%E6%BD%AE%E5%92%8C%E7%A6%BB%E6%B8%AF%E6%BD%AE/a-60961704)
 
-欧洲议会将于周二就一项不具约束力的决议进行表决，要求欧盟港口对俄罗斯船只和进出俄罗斯的船只关闭，但 “必要的合理的人道主义原因” 除外，这可能会增加该集团采取行动的政治压力。
+*发布：tianzhihuan*
 
-周一，西班牙交通部宣布该国的空域对俄罗斯运营的飞机关闭，并表示它已提议在海事部门采取类似措施。
-
-马德里表示，它正在考虑拒绝俄罗斯船只进入西班牙港口，禁止向其提供燃料或其他物资，甚至阻止俄罗斯或俄罗斯公司拥有的船只进入西班牙水域。
-
-汉堡港务局局长杰斯·迈尔（Jens Meier）周一在一个在线新闻发布会上说，虽然当时没有关于处理俄罗斯船只的明确规定，但他预计不久将宣布 “不再允许什么”。
-
-埃莱尼（Elegny）公司是恩吉（Engie）公司拥有的天然气运输和储存公司，负责运营亚马尔的克里斯托夫·德·马杰里所在的蒙托尔码头。当被问及是否收到政府或地方当局，关于处理该货物的任何指示时，该公司没有立即作出回应。
-
-**索夫康夫洛特船务公司首先受到限制**
-
-索夫康夫洛是被美国财政部上周限制，在美国市场融资的俄罗斯实体之一，航运界人士称，这将使这家在莫斯科上市的公司的交易变得复杂。
-
-原文链接：[https://www.newsmax.com/world/globaltalk/eu-shipping-industry-russia-ukraine/2022/03/01/id/1059092/](https://www.newsmax.com/world/globaltalk/eu-shipping-industry-russia-ukraine/2022/03/01/id/1059092/)
-
-翻译：烟波浩淼 | 校对：雨山溪桥客 | 编辑&发布：断播
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
