--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,27 +1,29 @@
 ---
-title: 美国跨党派参访团，支持捍卫43年台湾关系法
+title: 拜登称泽伦斯基在俄罗斯对乌克兰的残酷战争中 &#8220;鼓舞了世界&#8221;
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2091898/)
+`波士顿五月花农场金融部` [轉載自GNews](https://gnews.org/zh-hans/2091936/)
 
-美国总统拜登指派由前参谋首长联席会议主席穆伦率领的跨党派访问团昨抵台，特使团今日上午先后晋见蔡英文总统与副总统赖清德。面对乌克兰情势，蔡总统说，对侵略行为冷眼姑息，就是为自己制造更多威胁。乌克兰经验告诉我们民主国家相互合作与积极作为，是至为关键。穆伦则表示，美国反对片面改变现状行为，透过访台向区域伙伴传达美国坚定维持承诺。
+素材：波士顿五月花Vicky
+![](https://assets.gnews.org/wp-content/uploads/2022/03/Screen-Shot-2022-03-02-at-11.48.14-AM.png)图片来源：互联网
+拜登总统在周二晚上的国情咨文中说，乌克兰总统沃尔德米尔-泽伦斯基 “激励着世界”，因为他留在该国首都基辅，而基辅正被俄罗斯军队围困。
 
-这是拜登第二度派遣特使团访台，去年4月拜登派好友前参议员托德率团访台。这次访团由穆伦率领，成员有前国防部政策次长傅洛依、前白宫副国安顾问欧苏莉文、前白宫国安会亚洲事务资深主任葛林及麦艾文。
+“六天前，俄罗斯的弗拉基米尔-普京试图动摇自由世界的根基，认为他可以让世界屈服于他的威胁。但他严重失算了。拜登说：”他以为他可以进入乌克兰，世界就会翻身。”相反，他遇到了……一堵他从未预料到或想象到的力量之墙。他遇到了乌克兰人民和泽伦斯基总统。”
 
-蔡英文首先致词表示，在全球密切关注乌克兰情势此刻，拜登政府指派跨党派资深访团来台，说明对台美伙伴关系的重视，并凸显台湾在区域与国际社会角色，而国际民主社群必须更加团结。
+拜登补充说：”每一个乌克兰人，他们的无畏精神，他们的勇气决心，实际上激励着全世界。”
 
-她接着说，俄罗斯入侵乌克兰严重破坏国际和平与秩序，对于侵略行为，台湾作为国际社会一员，除了严厉谴责，也参与制裁俄罗斯行动，对乌克兰人道救援也已经启动。这坚定表达台湾与乌克兰站在一起，与自由民主站在一起，只要有助于国际社会和平安全与区域稳定繁荣，台湾愿意善尽国际责任与所有国家一起投注努力。
+总统发表这番言论时，美国和欧洲正在对俄罗斯进行一连串的制裁，旨在惩罚它的战争，而且美国和其他许多国家正在向乌克兰提供武器。
 
-蔡总统说，历史经验告诉我们，对侵略行为冷眼姑息，就是为自己制造更多威胁。这是全球民主国家团结的时刻，台湾也不能缺席。尤其乌克兰人民捍卫自由民主信念与保护自己国家的决心，让身处民主国家的台湾感同身受，当前中国对台海与区域军事威胁持续升高，**无论打压台湾国际空间，进行认知作战并操作错假讯息分化台湾社会与侵蚀民主，这些动作没有一天停止，而台湾人民没有因此放弃坚持。**我们愿意投入更多努力让台湾成为更具韧性的民主之岛。
+俄罗斯总统弗拉基米尔-普京(Vladimir Putin)在上个月发动全面入侵之前，命令其军队大部分在乌克兰边境集结。俄罗斯军队正在努力夺取乌克兰的主要城市，如其首都基辅，但随着战争时间的延长，他们使用的兵力明显增多。
 
-总统强调，我们要告诉全世界，台湾有坚定自我防卫决心，也会守护民主生活方式，而区域稳定安全从来不是单一国家课题，乌克兰经验告诉我们民主国家相互合作与积极作为，是至为关键。面对台海与区域安全威胁，除期待与美国与区域各方能有更多紧密合作，共同压制各种型态可能冲击安全单边行为，以维持区域和平稳定。也**感谢拜登政府以实际行动依据台湾关系法以及六项保证履行对台湾安全承诺，而拜登政府公布印太战略指台湾是重要伙伴**，而台湾不只是重要伙伴，更是最值得信任的伙伴，拥有更多支持的台湾将会更具贡献，她期待台美伙伴关系更加紧密，为印太区域与全世界和平稳定做出更多贡献。
+这包括一个长达数英里的装甲车车队，该车队目前正在前往基辅的路上–尽管据一名高级国防官员称，由于天然气短缺，这一行动 “陷入了困境”。
 
-接着致词的穆伦说，在蔡总统有力领导下，不仅在台湾，区域和平的重要性更胜以往。他率领代表团是表达对美台伙伴关系的支持，在此关键时刻访台，如同拜登总统指民主面临艰难挑战，乌克兰即是，此刻更需要捍卫民主。他并肯定能访问世界上最具民主活力的地方之一，台湾无论对疫情与假讯息的挑战，在因应之余都能兼顾民主价值。
+拜登周二陈述了制裁对俄罗斯经济已经产生的巨大影响，以及西方国家在应对方面的团结一致。许多国家，”甚至是瑞士，都在给俄罗斯施加痛苦，支持乌克兰人民。普京现在比以往任何时候都更加孤立于世界，”拜登在全场起立鼓掌中说。
 
-**穆伦还说，这次访团反映美国跨党派对台的强健支持，这并符合美国与全球利益，也说明美国继续反对片面改变现状行为，并持续支持符合台湾人民意愿与最佳方式和平解决两岸议题，透过访问也向区域伙伴传达美国坚定维持承诺。他并提到****4****月是台湾关系法签署****43****周年，拜登当年在议员任内投下赞成票，美台关系将比以往更能强健合作。**
+原文链接：[Biden says Zelenskyy ‘inspires the world’ amid brutal Russian war on Ukraine](https://www.foxnews.com/politics/biden-zelenskyy-putin-russia-ukraine-inspire-world)
 
-**[接见拜登特使团 总统︰台湾有坚定防卫决心 期待与美更紧密合作](https://news.ltn.com.tw/news/politics/breakingnews/3845642)**
+* * *
 
-审核:Athena雅典娜 发布:Amitofu
+*编辑&发布：Vicky*
 
  
 
