--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,67 +1,82 @@
 ---
-title: 聚焦：普京下一步还会做什么？
+title: 也许是时候世界支持台湾合法政府的独立了
 ---
-`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/2091816/)
+`美国政要直译推` [轉載自GNews](https://gnews.org/zh-hans/2091836/)
 
-作者：丁过
+参议员马可.卢比奥： 由于 [#中共国](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1%E5%9B%BD?src=hashtag_click) [#China](https://twitter.com/hashtag/China?src=hashtag_click) 支持承认俄罗斯在 [#乌克兰](https://twitter.com/hashtag/%E4%B9%8C%E5%85%8B%E5%85%B0?src=hashtag_click) [#Ukraine](https://twitter.com/hashtag/Ukraine?src=hashtag_click) 的傀儡的独立，也许是时候世界支持 [#台湾](https://twitter.com/hashtag/%E5%8F%B0%E6%B9%BE?src=hashtag_click) [#Taiwan](https://twitter.com/hashtag/Taiwan?src=hashtag_click) 合法政府的独立了
 
-编辑与校对：冰糖葫芦喵
 
-由于乌克兰的战况对俄罗斯非常不利，**普京近日已把俄罗斯三军总参谋长兼国防部第一副部长吉拉西莫夫撒职**。
 
-**俄乌在2月28日举行谈判，双方实际上以谈判破裂收场。**
+> Since [#China](https://twitter.com/hashtag/China?src=hash&amp;ref_src=twsrc%5Etfw) supports recognizing the independence of Russian puppets in [#Ukraine](https://twitter.com/hashtag/Ukraine?src=hash&amp;ref_src=twsrc%5Etfw) maybe its time the world supports the independence of the legitimate government of [#Taiwan](https://twitter.com/hashtag/Taiwan?src=hash&amp;ref_src=twsrc%5Etfw)
+> — Marco Rubio (@marcorubio) [March 2, 2022](https://twitter.com/marcorubio/status/1498825760924176391?ref_src=twsrc%5Etfw)
 
-英国皇家三军联合国防研究所（RUSI）研究员**惠特灵3月1日表示，大批俄军正从白俄罗斯入侵乌克兰，目前普京部署到乌克兰的兵力已经占到俄罗斯总兵力约70%，他们的目标是拿下基辅。**
-![](https://assets.gnews.org/wp-content/uploads/2022/03/惠特灵.jpg)英国皇家三军联合国防研究所（RUSI）研究员**惠特灵**(网络截图）
-美国国防部官员也证实**俄国已派出75％兵力攻打乌克兰。**
 
-惠灵顿还透露，**俄罗斯部队携带了集束炸弹**，此外，**俄军还朝人口稠密的平民区发射大量的高爆炸弹。**
 
-集束炸弹指航空子母炸弹，空中母弹可释放出数十甚至数百个子炸弹，一个子炸弹覆盖面积可达一个标准足球场，可穿透125毫米厚的装甲。
+参议员玛莎·布莱克本： 在对乌克兰采取了令人发指的行动后，俄罗斯不配获得联合国安理会的席位。
 
-由于集束炸弹的巨大杀伤力，2010年一百多个国家参与制定的**《国际禁用集束炸弹公约》**正式生效。公约规定**，禁止[缔约](https://baike.baidu.com/item/%E7%BC%94%E7%BA%A6)国生产、使用、储存或转让集束炸弹。**但中共国、美国、俄罗斯拒绝在该公约上签字。
-![](https://assets.gnews.org/wp-content/uploads/2022/03/集束炸弹.jpg)集束炸弹（图片来源：网络）
-即使俄罗斯军队几乎倾巢出动，但在**乌克兰军民的拼死抵抗和西方不断向乌军输送先进武器**的情况下，**俄军要取得胜利非常困难，**如果**俄军陷入长期战争泥潭，愤怒的民众和既得利益集团就会把普京赶下台。**
 
-回顾历史，俄国人对战败的领导人一点都不宽容，最近两次是1962年古巴导弹危机苏联被迫退出古巴导致赫鲁哓夫下台，1989年阿富汗战争失败导致戈尔巴乔夫下台及苏联解体。
 
-**为了避免下台的命运，普京或对乌克兰军民使用包括集束炸弹、**被称为“炸弹之父”、威力仅次于核弹的真空弹（也叫空爆燃烧弹、云爆弹等）。有西方政要甚至认为**普京可能在乌克兰使用化武和小型核武。**
+> Russia does not deserve a seat on the UN Security Council after its egregious actions toward Ukraine. [pic.twitter.com/qz24oQcHMK](https://t.co/qz24oQcHMK)
+> — Sen. Marsha Blackburn (@MarshaBlackburn) [March 2, 2022](https://twitter.com/MarshaBlackburn/status/1498829680509693954?ref_src=twsrc%5Etfw)
 
-真空弹爆炸时燃烧周遭空气，产生致命冲击波，并让附近所有人把燃烧的空气吸入肺部，进而产生严重伤害，即使在地下掩体，也很难幸免。
 
-**俄军在20年前的车臣战争中曾经对车臣城市街区使用真空弹。**
 
-乌克兰驻**美国大使玛卡罗娃28日已经指控俄罗斯在乌克兰战场使用了真空弹。**
-![](https://assets.gnews.org/wp-content/uploads/2022/03/真空弹.jpg)“炸弹之父”真空弹爆发（图片来源：网络）
-美方迅速回应，白宫发言人莎琪称她已看到相关报告，但有待进一步核实。她在记者会上说：**“如果这是事实，那可能会是战争罪”。**俄罗斯驻美大使馆并未对此做出回应。
+参议员玛莎.布莱克本： 联合国必须剥夺俄罗斯在安理会的否决权。
 
-看来俄罗斯大概率会在乌克兰使用这些武器，如果西方害怕报复而坐视不管，乌克兰军队将遭受灭顶之灾，战场形势将发生根本性逆转。
 
-**普京极可能把这种恶劣手段使用到和俄罗斯有历史恩怨和领土纠纷的瑞典、波兰、芬兰、波罗的海三国等头上，整个欧洲将陷入黑暗之中。**
 
-已经和俄罗斯结盟的习近平也会如法炮制，对台湾使用这些武器。
+> The UN must strip Russia of its ability to veto in the security council.
+> — Sen. Marsha Blackburn (@MarshaBlackburn) [March 1, 2022](https://twitter.com/MarshaBlackburn/status/1498787977719431172?ref_src=twsrc%5Etfw)
 
-由于**乌克兰和台湾沦陷将严重威胁欧美的安全利益**，加上民意一夜爆发，**美欧对中俄同盟的态度将趋于强硬。**
 
-因此，**如果俄罗斯在乌克兰使用真空弹、集束炸弹等武器，或将招致美欧国家和乌克兰的对等反击，**孤注一掷的普京会疯狂报复。至此，战火极有可能延烧到乌克兰之外。
 
-美国与欧盟**把俄罗斯踢出SWIFT全球支付系统，直刺俄经济心脏，将导致俄罗斯现有6300亿美元国际储备的50%以上遭到冻结。**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/SWIFT-e1645919681197.jpg)图片来源:网络。
-此前普京曾扬言，把俄罗斯逐出SWIFT系统无异于宣战，最近普京称，西方对俄罗斯的制裁“是非法行为”。可以预见，**普京不会甘心接受这样的制裁，同时他对西方援助乌克兰先进武器等也会怀恨在心，因此他极可能用升级、扩大战争**来威逼乌克兰和西方就范。
+拜登总统： 普京总统认为他可以顺利挺进乌克兰——世界将会接受。 相反，他遇到了他从未想到过的强力阻击。 他遇到了(强大的)乌克兰人民。
 
-另外，综合多家媒体报道，**普京是老牌克格勃出身，**一直以来都能够控制自己的情绪，但**近期性情大变，频频大发雷霆**， 因此**有人认为普京有精神或神经方面的疾病，他的行为已经难以预测。**
 
-一名俄罗斯企业家说，我们不知道普京接下来会干出什么事情，商界里没有人知道。
 
-**这样的普京才是最可怕的。**
+> President Putin thought he could roll into Ukraine — and the world would roll over.
+>  
+> Instead, he met a wall of strength he never imagined.
+>  
+> He met the Ukrainian people.
+> — President Biden (@POTUS) [March 2, 2022](https://twitter.com/POTUS/status/1498843134721150979?ref_src=twsrc%5Etfw)
 
-**新闻来源链接：**
 
-[https://tw.news.yahoo.com/%E5%B0%8E%E5%BD%88%E9%80%A3%E7%82%B8%E7%83%8F%E5%9C%8B-%E4%BF%84%E5%9C%8B%E6%B4%BE75-%E5%85%B5%E5%8A%9B%E9%80%B2%E6%94%BB-104818765.html](https://tw.news.yahoo.com/%E5%B0%8E%E5%BD%88%E9%80%A3%E7%82%B8%E7%83%8F%E5%9C%8B-%E4%BF%84%E5%9C%8B%E6%B4%BE75-%E5%85%B5%E5%8A%9B%E9%80%B2%E6%94%BB-104818765.html)
 
-[https://news.ltn.com.tw/news/world/breakingnews/3845406](https://news.ltn.com.tw/news/world/breakingnews/3845406)
+拜登总统： 美国司法部正在组建一个专门的工作组来追查俄罗斯寡头的罪行。 我们正与我们的欧洲盟友一起寻找并没收他们的游艇、豪华公寓和私人飞机。 我们不会放过他们的不义之财。
 
-[https://tw.news.yahoo.com/%E6%AF%8F%E5%80%8B%E4%BA%BA%E9%83%BD%E5%BE%88%E7%97%9B%E8%8B%A6-%E4%B8%8D%E7%9F%A5%E9%81%93%E6%99%AE%E4%BA%AC%E9%82%84%E6%9C%83%E5%81%9A%E5%87%BA%E4%BB%80%E9%BA%BC%E4%BA%8B%E6%83%85-%E4%BF%84%E7%BE%85%E6%96%AF%E6%89%BF%E5%8F%97%E4%BE%B5%E7%95%A5%E4%BB%A3%E5%83%B9-%E7%B6%93%E6%BF%9F%E7%A4%BE%E6%9C%83%E5%8D%B1%E6%A9%9F%E9%99%8D%E8%87%A8-070704364.html](https://tw.news.yahoo.com/%E6%AF%8F%E5%80%8B%E4%BA%BA%E9%83%BD%E5%BE%88%E7%97%9B%E8%8B%A6-%E4%B8%8D%E7%9F%A5%E9%81%93%E6%99%AE%E4%BA%AC%E9%82%84%E6%9C%83%E5%81%9A%E5%87%BA%E4%BB%80%E9%BA%BC%E4%BA%8B%E6%83%85-%E4%BF%84%E7%BE%85%E6%96%AF%E6%89%BF%E5%8F%97%E4%BE%B5%E7%95%A5%E4%BB%A3%E5%83%B9-%E7%B6%93%E6%BF%9F%E7%A4%BE%E6%9C%83%E5%8D%B1%E6%A9%9F%E9%99%8D%E8%87%A8-070704364.html)
+
+
+> The U.S. Department of Justice is assembling a dedicated task force to go after the crimes of Russian oligarchs.
+>  
+> We are joining with our European allies to find and seize their yachts, their luxury apartments, their private jets. 
+>  
+> We are coming for their ill-begotten gains.
+> — President Biden (@POTUS) [March 2, 2022](https://twitter.com/POTUS/status/1498844556300886022?ref_src=twsrc%5Etfw)
+
+
+
+比尔·格茨: 拜登今晚没有提到要让 [#中共](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1?src=hashtag_click) 对传播导致大流行的 [#中共病毒](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92?src=hashtag_click) 负责。[#中共](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1?src=hashtag_click) 放出致命病毒，是邪恶的，必须承担责任，否则北京将制造更多致命的瘟疫。
+
+
+
+> Biden tonight made no mention of holding Communst China accountable for spreading the virus that caused the pandemic. The CCP unleashed the deadly virus, is evil, and must be held responsible or Beijing will create even more deadly plagues
+> — Bill Gertz (@BillGertz) [March 2, 2022](https://twitter.com/BillGertz/status/1498854110472278016?ref_src=twsrc%5Etfw)
+
+
+
+参议员玛莎·布莱克本： 同意劳拉·英格拉汉姆[@IngrahamAngle](https://twitter.com/IngrahamAngle) – 拜登必须制裁 [#中共](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1?src=hashtag_click) 支持俄罗斯入侵乌克兰的行径。 俄罗斯、[#中共国](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1%E5%9B%BD?src=hashtag_click)、伊朗和北朝鲜是新的邪恶轴心国。 必须阻止他们。
+
+
+
+> Agree with [@IngrahamAngle](https://twitter.com/IngrahamAngle?ref_src=twsrc%5Etfw) – Biden must sanction Communist China for bolstering Russia’s invasion of Ukraine.
+>  
+> Russia, China, Iran and North Korea are the new axis of evil.
+>  
+> They must be stopped. [https://t.co/dmx0r74mcE](https://t.co/dmx0r74mcE)
+> — Sen. Marsha Blackburn (@MarshaBlackburn) [March 2, 2022](https://twitter.com/MarshaBlackburn/status/1498835382389125120?ref_src=twsrc%5Etfw)
+
+
 
  
 
