--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,66 +1,27 @@
 ---
-title: 中国证监机构会见外资银行
+title: 俄军士兵请放下屠刀 为普京送命只值105美金
 ---
-`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/2092016/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2092019/)
 
-作者：香草山金融部-Opal
+**作者:  **青衣
+![](https://assets.gnews.org/wp-content/uploads/2022/03/1-20.jpg)
+图为俄罗斯武装部队（图片来自网络）
 
+俄罗斯悍然发动对乌克兰的侵略战争，目前双方都死伤惨重。而为俄罗斯卖命的俄军士兵，竟然命贱到每人抚恤金只有105美金！
 
+据《阿波罗新闻网》3月2日报道，俄罗斯总统普京2月24日派兵入侵乌克兰，至今已近一周时间。目前两军死伤惨重，但俄方直至2月28日才公布有俄军官兵伤亡。而俄军士兵阵亡的家属抚恤金，一人竟仅能拿到11000卢布，相当于105美元。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-40-1-10.png)
+前乌克兰官员萨姆利尼（Sergej Sumlenny）周二在推特上转发俄罗斯电视台发布的消息，指出俄罗斯士兵若在战争中阵亡，俄国政府会给家属每人抚恤金11000卢布（约105美元）。
 
+而与此同时，乌克兰国防部长列兹尼科夫（Oleksii Reznikov）透过脸书招降俄军，表示俄军若投降，将给予500万卢布（大约5万美元）的现金或加密货币，呼吁俄军展开新生活。
 
+为普京发动的侵略战争卖命，不仅如此命贱，并且还将背上历史的骂名。俄军士兵们，放下屠刀吧，该做出你们正确的选择了。
 
-路透社引述三位消息灵通人士的报告，中国证券监督管理委员会（CSRC）在1月25日周二，由中国证监会副主席方星海主持，召开了与十几家外国金融机构的虚拟会议。与会者包括贝莱德、瑞士信贷、富达国际、高盛、摩根大通、摩根士丹利和瑞银等西方顶级银行和资产管理公司的高级管理人员。方星海向与会者表示，中国的领导层明白，中国在2021年推出的监管变革将影响经济增长，但决心容忍这种痛苦。他还说，中国和美国在协调管理在纽约上市的中国公司的法规方面正在取得进展，到6月或更早可能会有 “积极惊喜”。方星海向与会者保证，中国将在2022年实现 “可敬的增长”。
+新闻链接：
 
+[https://www.aboluowang.com/2022/0302/1715365.html?utm\_source=dlvr.it&utm\_medium=twitter](https://www.aboluowang.com/2022/0302/1715365.html?utm_source=dlvr.it&amp;utm_medium=twitter)
 
-
-![](https://assets.gnews.org/wp-content/uploads/2022/03/3-1-pic.jpg)
-
-
-
-对以上消息，中国证监会没有立即回应评论请求。富达和瑞银拒绝发表评论，而其他公司也没有立即回应评论请求。
-
-现在这个当口，中共证监会召开这样的视频会议，我的理解他们对国外金融机构，进行安抚人心，舒缓经济担忧，同时也在招商引资。
-
-现在疫情还在持续，虽然中共官方报道都是零星小规模疫情。经济复苏缓慢，消费疲软，加上去年中共监管机构瞄准了科技巨头、私营教育公司和其他公司，针对不公平竞争和数据治理，这些都带来了不确定性。当然会损害市场情绪，又可能削弱投资。中共证监会出面安抚人心。
-
-另外，美国证券交易委员会在去年12月2日 发布新规则，将连续三年不符合美国审计标准的中国公司从美国交易所除名，还要求在美国上市的中国公司必须向美国证券交易委员会证明它们没有被外国政府的实体所拥有或控制，并说明任何身为中国共产党官员的董事会成员。这就会影响到200多家中概股公司的命运，如果连续3年不符合美国审计标准，就被从美国交易所除名。
-
-方星海针对这一新规则对与会者说，中国和美国在协调管理在纽约上市的中国公司的法规方面正在取得进展，到6月或更早可能会有 “积极惊喜”。我的理解，要么中共国妥协，要么美国妥协，但是中共国妥协的可能性大些，因为毕竟现在世界上只有中共国和香港的在美上市公司拒绝遵守美国审计标准。
-
-最令中共国政府头疼的是去年第四季度经济同比增长4%，是1年多来最弱的增长，房地产行业暴雷一个接一个，负债累累，前景暗淡。中共国的经济现在很糟，中国人民银行已经开始降息并向金融系统注入更多现金作为回应。现在全球其他国家的央行正准备加息，特别是美联储可能今年会加息4次以上，中共国央行与他们背道而驰的做法，是很有风险的，它的放松过快而且大幅。现在就有大量的资本外流，别说等到世界各国都加息了，那时大量资本会从中共国的经济流出而且速度会更快，进而会迫使中共的央行提高利率。
-
-我想中共国的央行和证监会也明白这个道理，但是他们也没有办法：经济糟糕，加息不行，降息也不行，横也不好，竖也不好。所以中国证监会很想乘此机会探口风，想从与会者那里听到，由于美国利率上升的前景，外国金融机构对中国的资产配置是否会改变。
-
-（本文仅代表作者个人观点）
-
-直播链接：
-
-[https://www.gtv.org/video/id=6207c320a1fe5e57a42763b5](https://www.gtv.org/video/id=6207c320a1fe5e57a42763b5)
-
-图片来源：
-
-[www.reuters.com](https://www.reuters.com/)
-
-参考：
-
-[https://www.reuters.com/world/china/exclusive-china-regulator-talks-foreign-banks-soothe-concerns-over-economy-2022-01-28/](https://www.reuters.com/world/china/exclusive-china-regulator-talks-foreign-banks-soothe-concerns-over-economy-2022-01-28/)
-
-
-
-![](https://assets.gnews.org/wp-content/uploads/2022/03/1CF3DD2A-41F7-4BE6-8424-B8677D173BB1.jpeg)
-
-
-
-编辑/校对/发稿：遵从内心
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+* * *
 
  
 
