--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,29 +1,66 @@
 ---
-title: G7财长就加强对俄施压达成一致
+title: 中国证监机构会见外资银行
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2092012/)
+`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/2092016/)
 
-![德国绿党和自民党党主席年纪只有四五十，新生代将撑起德国新内阁？_手机新浪网](https://n.sinaimg.cn/spider20211126/741/w1000h541/20211126/f0f5-dbb42a59a45b55ff08d6acf31858f9f4.jpg)德国财长林德纳（资料图）
-据共同社3月2日报道，日美欧七国集团（G7）1日在线召开财长和央行行长会议，就对进攻乌克兰的俄罗斯加强施压的方针达成了一致。日本财务相铃木俊一在会后召开记者会，围绕追加经济制裁称“今后也将迅速采取进一步行动”。
-
-另据路透社称，轮值主席国德国的财长林德纳在会后召开记者会，介绍称“讨论了（对俄）实施何种追加措施可行”。林德纳称“希望在政治、财政和经济上孤立俄罗斯”。美国财长耶伦在声明中强调：“将与盟友协作，继续支持把俄主要银行排除在SWIFT之外。”
-
-近日俄罗斯宣称已接入中共国CIPS系统，以此绕开SWIFT系统。对于小粉红和五毛来说，怎么也想不到俄罗斯已开始洗劫自己和所有中共国老百姓的财富，吃草的日子不远了。西方国家已看清与普京狼狈为奸的中共才是背后最大的始作俑者，终究逃不了被制裁和诛杀的命运。
-
-新闻参考链接：[https://china.kyodonews.net/news/2022/03/c9b91f939a28-g7.html](https://china.kyodonews.net/news/2022/03/c9b91f939a28-g7.html)
-
-编辑：MQ
-
-* * *
-
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+作者：香草山金融部-Opal
 
 
-编辑：【英国伦敦喜庄园编辑部】
 
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-40-1-10.png)
+
+
+
+路透社引述三位消息灵通人士的报告，中国证券监督管理委员会（CSRC）在1月25日周二，由中国证监会副主席方星海主持，召开了与十几家外国金融机构的虚拟会议。与会者包括贝莱德、瑞士信贷、富达国际、高盛、摩根大通、摩根士丹利和瑞银等西方顶级银行和资产管理公司的高级管理人员。方星海向与会者表示，中国的领导层明白，中国在2021年推出的监管变革将影响经济增长，但决心容忍这种痛苦。他还说，中国和美国在协调管理在纽约上市的中国公司的法规方面正在取得进展，到6月或更早可能会有 “积极惊喜”。方星海向与会者保证，中国将在2022年实现 “可敬的增长”。
+
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/03/3-1-pic.jpg)
+
+
+
+对以上消息，中国证监会没有立即回应评论请求。富达和瑞银拒绝发表评论，而其他公司也没有立即回应评论请求。
+
+现在这个当口，中共证监会召开这样的视频会议，我的理解他们对国外金融机构，进行安抚人心，舒缓经济担忧，同时也在招商引资。
+
+现在疫情还在持续，虽然中共官方报道都是零星小规模疫情。经济复苏缓慢，消费疲软，加上去年中共监管机构瞄准了科技巨头、私营教育公司和其他公司，针对不公平竞争和数据治理，这些都带来了不确定性。当然会损害市场情绪，又可能削弱投资。中共证监会出面安抚人心。
+
+另外，美国证券交易委员会在去年12月2日 发布新规则，将连续三年不符合美国审计标准的中国公司从美国交易所除名，还要求在美国上市的中国公司必须向美国证券交易委员会证明它们没有被外国政府的实体所拥有或控制，并说明任何身为中国共产党官员的董事会成员。这就会影响到200多家中概股公司的命运，如果连续3年不符合美国审计标准，就被从美国交易所除名。
+
+方星海针对这一新规则对与会者说，中国和美国在协调管理在纽约上市的中国公司的法规方面正在取得进展，到6月或更早可能会有 “积极惊喜”。我的理解，要么中共国妥协，要么美国妥协，但是中共国妥协的可能性大些，因为毕竟现在世界上只有中共国和香港的在美上市公司拒绝遵守美国审计标准。
+
+最令中共国政府头疼的是去年第四季度经济同比增长4%，是1年多来最弱的增长，房地产行业暴雷一个接一个，负债累累，前景暗淡。中共国的经济现在很糟，中国人民银行已经开始降息并向金融系统注入更多现金作为回应。现在全球其他国家的央行正准备加息，特别是美联储可能今年会加息4次以上，中共国央行与他们背道而驰的做法，是很有风险的，它的放松过快而且大幅。现在就有大量的资本外流，别说等到世界各国都加息了，那时大量资本会从中共国的经济流出而且速度会更快，进而会迫使中共的央行提高利率。
+
+我想中共国的央行和证监会也明白这个道理，但是他们也没有办法：经济糟糕，加息不行，降息也不行，横也不好，竖也不好。所以中国证监会很想乘此机会探口风，想从与会者那里听到，由于美国利率上升的前景，外国金融机构对中国的资产配置是否会改变。
+
+（本文仅代表作者个人观点）
+
+直播链接：
+
+[https://www.gtv.org/video/id=6207c320a1fe5e57a42763b5](https://www.gtv.org/video/id=6207c320a1fe5e57a42763b5)
+
+图片来源：
+
+[www.reuters.com](https://www.reuters.com/)
+
+参考：
+
+[https://www.reuters.com/world/china/exclusive-china-regulator-talks-foreign-banks-soothe-concerns-over-economy-2022-01-28/](https://www.reuters.com/world/china/exclusive-china-regulator-talks-foreign-banks-soothe-concerns-over-economy-2022-01-28/)
+
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/03/1CF3DD2A-41F7-4BE6-8424-B8677D173BB1.jpeg)
+
+
+
+编辑/校对/发稿：遵从内心
+
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
 
  
 
