--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,17 +1,30 @@
 ---
-title: 中共自知命不久矣 两会在即立下遗言
+title: G7财长就加强对俄施压达成一致
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2092001/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2092012/)
 
-撰稿：东京樱花团/加一颗稻草
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-141.png)[图片来源](https://www.google.com/imgres?imgurl=http%3A%2F%2Fimgcdn.yicai.com%2Fvms-new%2F2022%2F03%2F8d29c2ac-1f25-4952-a7c2-876fcf5fbbd7.jpg&amp;imgrefurl=https%3A%2F%2Fwww.yicai.com%2Fnews%2F101332570.html&amp;tbnid=kDeDhOTY8soEoM&amp;vet=12ahUKEwi-yq3Nxab2AhUe73MBHf8pADoQMygEegUIARC1AQ..i&amp;docid=8P8gf-GNvG2MYM&amp;w=886&amp;h=488&amp;itg=1&amp;q=%E4%B9%A0%E8%BF%91%E5%B9%B3%E5%9C%A8%E4%B8%AD%E5%A4%AE%E5%85%9A%E6%A0%A1&amp;ved=2ahUKEwi-yq3Nxab2AhUe73MBHf8pADoQMygEegUIARC1AQ)
-央视网2022年3月2日报道，习近平在中央党校(国家行政学院)中青年干部培训班开班式上发表讲话强调，巩固理想信念根基，树立践行正确政绩观，在新时代新征程上留下无悔的奋斗足迹。
+![德国绿党和自民党党主席年纪只有四五十，新生代将撑起德国新内阁？_手机新浪网](https://n.sinaimg.cn/spider20211126/741/w1000h541/20211126/f0f5-dbb42a59a45b55ff08d6acf31858f9f4.jpg)德国财长林德纳（资料图）
+据共同社3月2日报道，日美欧七国集团（G7）1日在线召开财长和央行行长会议，就对进攻乌克兰的俄罗斯加强施压的方针达成了一致。日本财务相铃木俊一在会后召开记者会，围绕追加经济制裁称“今后也将迅速采取进一步行动”。
 
-中共历来中冠冕堂皇的话语来掩盖其卑鄙的统治手段。现在由小编我来为大家逐句解释这段新闻的内在意图。1、他给中青年干部讲话，说明老的干部已经不被信任了，只有忽悠这些没有根基的愣头青。2、强调巩固根基说明这个根基已经出问题了。一个破旧的建筑不想倒下只有维护根基这一个办法。3、要求树立正确的政绩观，是告诉这些人靠经济出政绩已经不行了，维稳是现在的政绩观。4、最后一句话才是重中之重，在目前的国际、国内的形式面前已经没有退路了。宗上所述，中共已经穷途末路正在准备做垂死挣扎。
+另据路透社称，轮值主席国德国的财长林德纳在会后召开记者会，介绍称“讨论了（对俄）实施何种追加措施可行”。林德纳称“希望在政治、财政和经济上孤立俄罗斯”。美国财长耶伦在声明中强调：“将与盟友协作，继续支持把俄主要银行排除在SWIFT之外。”
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/03/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+近日俄罗斯宣称已接入中共国CIPS系统，以此绕开SWIFT系统。对于小粉红和五毛来说，怎么也想不到俄罗斯已开始洗劫自己和所有中共国老百姓的财富，吃草的日子不远了。西方国家已看清与普京狼狈为奸的中共才是背后最大的始作俑者，终究逃不了被制裁和诛杀的命运。
+
+新闻参考链接：[https://china.kyodonews.net/news/2022/03/c9b91f939a28-g7.html](https://china.kyodonews.net/news/2022/03/c9b91f939a28-g7.html)
+
+编辑：MQ
+
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+
+
+编辑：【英国伦敦喜庄园编辑部】
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
